--- a/ok/bc/bc17-0.3.5.0.0.md
+++ b/ok/bc/bc17-0.3.5.0.0.md
@@ -1,6 +1,6 @@
 ### 阿胶
 
-〔原文〕**甘平。清肺养肝，滋肾益气，**肺主气，肾纳气。**和血补阴，**肝主血，血属阴。**除风化痰，润燥定喘，利大小肠。治虚劳咳嗽，肺痿吐脓，吐血衄血，血淋血痔，肠风下痢，**伤寒伏热成痢者，必用之，妊娠血痢尤甚。**腰痠骨痛，血痛血枯，经水不调，崩带胎动。**或妊娠下血，酒煎服。**痈疽肿毒，及一切风病泻者忌用。**大抵补血与液，为肺大肠要药。寇宗爽曰：驴皮煎胶，取其发散皮肤之外，用乌者，取其属水以制热则生风之义，故又治风也。陈自明曰：补虚用牛皮胶，去风用驴皮胶。杨士瀛曰：小儿惊风后，瞳人不正者，以阿胶倍人参服最良。阿胶育神，人参益气也。按阿井乃济水伏流，其性趋下，用搅浊水则清，故治瘀浊及逆上之痰也。**用黑驴皮阿井水煎成，**苏颂曰：《本经》阿胶亦用牛皮，现二胶可通用。牛皮胶制作不精，故不堪用。**以黑光带绿色，夏月不软者真。锉炒成珠，或面炒、蛤粉炒、**去痰。**蒲黄炒，**止血。**酒化水化，童便和用。得火良。山药为使，畏大黄。**
+〔原文〕**甘平。清肺养肝，滋肾益气，**<small>肺主气，肾纳气。</small>**和血补阴，**<small>肝主血，血属阴。</small>**除风化痰，润燥定喘，利大小肠。治虚劳咳嗽，肺痿吐脓，吐血衄血，血淋血痔，肠风下痢，**<small>伤寒伏热成痢者，必用之，妊娠血痢尤甚。</small>**腰痠骨痛，血痛血枯，经水不调，崩带胎动。**<small>或妊娠下血，酒煎服。</small>**痈疽肿毒，及一切风病泻者忌用。**<small>大抵补血与液，为肺大肠要药。寇宗奭曰：驴皮煎胶，取其发散皮肤之外，用乌者，取其属水以制热则生风之义，故又治风也。陈自明曰：补虚用牛皮胶，去风用驴皮胶。杨士瀛曰：小儿惊风后，瞳人不正者，以阿胶倍人参服最良。阿胶育神，人参益气也。按阿井乃济水伏流，其性趋下，用搅浊水则清，故治瘀浊及逆上之痰也。</small>**用黑驴皮阿井水煎成，**<small>苏颂曰：《本经》阿胶亦用牛皮，现二胶可通用。牛皮胶制作不精，故不堪用。</small>**以黑光带绿色，夏月不软者真。锉炒成珠，或面炒、蛤粉炒、**<small>去痰。</small>**蒲黄炒，**<small>止血。</small>**酒化水化，童便和用。得火良。山药为使，畏大黄。**
 
 【讲解】**阿胶善能补血止血，又可滋阴养肺。**为马科动物驴的皮，经漂泡去毛后熬制而成的胶块。呈整齐长方形块状，表面乌黑有光泽，对光透视略透明。古时以山东省东阿县用阿井水煎炼而成得名。现各地大多都有生产，而以山东、浙江、江苏等地产量较多。原药块用，烊化冲服，或将胶块打碎，用蛤粉或蒲黄粉炒成阿胶珠用。
 
