--- a/ok/bc/bc17-0.3.7.0.0.md
+++ b/ok/bc/bc17-0.3.7.0.0.md
@@ -1,6 +1,6 @@
 ### 龙眼肉
 
-〔原文〕**甘温归脾，益脾长智，**一名益智。**养心补血，**心为脾母。**故归脾汤用之。治思虑劳伤心脾，及肠风下血。**心生血，脾统血，思虑过多，则心脾伤而血耗，致有健忘怔忡惊悸诸病。归脾汤能引血归脾而生补之。肠风亦由血不归脾而妄行。
+〔原文〕**甘温归脾，益脾长智，**<small>一名益智。</small>**养心补血，**<small>心为脾母。</small>**故归脾汤用之。治思虑劳伤心脾，及肠风下血。**<small>心生血，脾统血，思虑过多，则心脾伤而血耗，致有健忘怔忡惊悸诸病。归脾汤能引血归脾而生补之。肠风亦由血不归脾而妄行。</small>
 
 【讲解】**龙眼肉补益心脾以养营血，而有良好的安神作用。**为无患科常绿乔木龙眼树的成熟果肉。生用。
 
