--- a/ok/bc/bc17-0.4.1.0.0.md
+++ b/ok/bc/bc17-0.4.1.0.0.md
@@ -1,6 +1,6 @@
 ### 沙参
 
-〔原文〕**甘苦微寒，味淡体轻。专补肺气，清肺养肝，兼益脾肾，**脾为肺母，肾为肺子。**久嗽肺痿，金受火克者宜之，寒客肺中作嗽者勿服。**人参补五脏之阳，沙参补五脏之阴，肺热者用之，以代人参。**似人参而体轻松，白实者良。生沙地者长大，生黄土者瘦小。畏防己，反藜芦。**北地真者难得。郑奠一曰：能疗胸痹心腹痛，邪热结，去皮肤游风疥癣恶疮，疝气崩带。沙参分南北两种，北者良，南者功用相同而力稍缓。
+〔原文〕**甘苦微寒，味淡体轻。专补肺气，清肺养肝，兼益脾肾，**<small>脾为肺母，肾为肺子。</small>**久嗽肺痿，金受火克者宜之，寒客肺中作嗽者勿服。**<small>人参补五脏之阳，沙参补五脏之阴，肺热者用之，以代人参。</small>**似人参而体轻松，白实者良。生沙地者长大，生黄土者瘦小。畏防己，反藜芦。**<small>北地真者难得。郑奠一曰：能疗胸痹心腹痛，邪热结，去皮肤游风疥癣恶疮，疝气崩带。沙参分南北两种，北者良，南者功用相同而力稍缓。</small>
 
 【讲解】**沙参功能养肺阴、清肺热、养胃阴、生胃津。**有南、北沙参两种，南沙参为桔梗科植物轮叶沙参和杏叶沙参、阔叶沙参的根，主产于安徽、四川、江苏等地；北沙参为伞形科植物珊瑚菜的根，主产于山东、河北、辽宁等地。晒干，切片或切段生用。
 
