--- a/ok/bc/bc17-0.4.11.0.0.md
+++ b/ok/bc/bc17-0.4.11.0.0.md
@@ -1,6 +1,6 @@
 ### 桑椹
 
-〔原文〕**甘凉。色黑入肾而补水，利五脏关节，安魂镇神，聪耳明目，生津止渴，**炼膏，治服金石药热渴。**利水消肿，解酒乌髭。晒干为末，蜜丸良。取极熟者，滤汁熬膏，入蜜炼稠，点汤和酒并妙。入烧酒经年愈佳。**每日汤点服，亦治瘰病，名文武膏，以椹名文武实也。
+〔原文〕**甘凉。色黑入肾而补水，利五脏关节，安魂镇神，聪耳明目，生津止渴，**<small>炼膏，治服金石药热渴。</small>**利水消肿，解酒乌髭。晒干为末，蜜丸良。取极熟者，滤汁熬膏，入蜜炼稠，点汤和酒并妙。入烧酒经年愈佳。**<small>每日汤点服，亦治瘰病，名文武膏，以椹名文武实也。</small>
 
 【讲解】**桑椹功能滋阴补血，生津润肠。**为桑科落叶乔木桑树的成熟果穗。生用，或加蜜熬膏用。
 
