--- a/ok/bc/bc17-0.4.12.0.0.md
+++ b/ok/bc/bc17-0.4.12.0.0.md
@@ -1,8 +1,8 @@
 ### 楮实
 
-〔原文〕**甘寒。助阳气，起阴痿，补虚劳，壮筋骨，明目充肌。**李时珍曰：《别录》、《大明》皆云楮实大补益，而《修真秘书》又云：久服令人骨痿。《济生秘览》治骨鲠用楮实煎汤，岂非软骨之征乎？《本草发明》甚言其功，今补药中罕用，乃未之察耳。**取子浸去浮者，酒蒸用。**
+〔原文〕**甘寒。助阳气，起阴痿，补虚劳，壮筋骨，明目充肌。**<small>李时珍曰：《别录》、《大明》皆云楮实大补益，而《修真秘书》又云：久服令人骨痿。《济生秘览》治骨鲠用楮实煎汤，岂非软骨之征乎？《本草发明》甚言其功，今补药中罕用，乃未之察耳。</small>**取子浸去浮者，酒蒸用。**
 
-**楮皮善行水，治水肿气满。**皮可为纸，楮汁和白芨飞面，调糊接纸，永不解脱。
+**楮皮善行水，治水肿气满。**<small>皮可为纸，楮汁和白芨飞面，调糊接纸，永不解脱。</small>
 
 【讲解】**褚实功能滋肾清肝明目。**为桑科植物构树的果实。投水浮者去之，即去掉浮水面的未成熟者，然后晒干酒浸蒸焙令干用。
 
