--- a/ok/bc/bc17-0.4.13.0.0.md
+++ b/ok/bc/bc17-0.4.13.0.0.md
@@ -1,6 +1,6 @@
 ### 落花生
 
-〔原文〕**辛能润肺，香能舒脾。果中佳品，出闽广。藤生，花落地而结实，故名。**按：落花生本草未收，本无当医药之用，然能益脾润肺，实佳果也。因世人谤之者多，附见于此，明其有利无害也。**炒食。**
+〔原文〕**辛能润肺，香能舒脾。果中佳品，出闽广。藤生，花落地而结实，故名。**<small>按：落花生本草未收，本无当医药之用，然能益脾润肺，实佳果也。因世人谤之者多，附见于此，明其有利无害也。</small>**炒食。**
 
 【讲解】**落花生润肺补脾。**为豆科一年生草本植物落花生的种子，俗称"花生米”，入药生用。
 
