--- a/ok/bc/bc17-0.4.15.0.0.md
+++ b/ok/bc/bc17-0.4.15.0.0.md
@@ -1,8 +1,8 @@
 ### 鳖甲
 
-〔原文〕**咸平属阴，色青入肝，治劳瘦骨蒸，往来寒热，温疟疾母，**疟必暑邪，类多阴虚之人，疟久不愈，元气虚羸，邪陷中焦，则结为疟母。鳖甲能益阴除热而散结，故为治疟要药。**腰痛胁坚，血瘕痔核，**咸能软坚。**经阻产难，肠痈疮肿，惊痫斑痘，厥阴血分之病。**李时珍曰：介虫阴类，故皆补阴，或曰：本物属金与土，故入脾肺而治诸病。**色绿九肋，重七两者为上。醋炙，若治劳，童便炙，亦可熬膏。**
+〔原文〕**咸平属阴，色青入肝，治劳瘦骨蒸，往来寒热，温疟疾母，**<small>疟必暑邪，类多阴虚之人，疟久不愈，元气虚羸，邪陷中焦，则结为疟母。鳖甲能益阴除热而散结，故为治疟要药。</small>**腰痛胁坚，血瘕痔核，**<small>咸能软坚。</small>**经阻产难，肠痈疮肿，惊痫斑痘，厥阴血分之病。**<small>李时珍曰：介虫阴类，故皆补阴，或曰：本物属金与土，故入脾肺而治诸病。</small>**色绿九肋，重七两者为上。醋炙，若治劳，童便炙，亦可熬膏。**
 
-**鳖肉：凉血补阴，亦治疟痢。**煮作羹食，加生姜、沙糖，不用盐酱，名鳖糖汤。**恶矾石，忌苋菜、鸡子。**鳖色青，故走肝益肾而退热；龟色黑，故通心入肾而滋阴，阴性虽同，所用略别。
+**鳖肉：凉血补阴，亦治疟痢。**<small>煮作羹食，加生姜、沙糖，不用盐酱，名鳖糖汤。</small>**恶矾石，忌苋菜、鸡子。**<small>鳖色青，故走肝益肾而退热；龟色黑，故通心入肾而滋阴，阴性虽同，所用略别。</small>
 
 **鳖胆，味辣，可代椒解腥。**
 
