--- a/ok/bc/bc17-0.4.17.0.0.md
+++ b/ok/bc/bc17-0.4.17.0.0.md
@@ -1,6 +1,6 @@
 ### 乌骨鸡
 
-〔原文〕**甘平。鸡属木，而骨黑者属水，得水木之精气，故能益肝肾，退热补虚。治虚劳消渴，下痢噤口，**煮汁益胃。**带下崩中，肝肾血分之病。鬼击卒死者，用其血涂心下效。**《暌单志》：夏侯弘捉得一小鬼，问所持何物？曰：杀人以此矛戟中心腹者，无不辄死。弘曰：治此有方否？鬼曰：以乌鸡血敷之即瘥。**骨肉俱黑者良，舌黑者骨肉俱黑。男用雌，女用雄。**女科有乌鸡丸，治百病。
+〔原文〕**甘平。鸡属木，而骨黑者属水，得水木之精气，故能益肝肾，退热补虚。治虚劳消渴，下痢噤口，**<small>煮汁益胃。</small>**带下崩中，肝肾血分之病。鬼击卒死者，用其血涂心下效。**<small>《暌单志》：夏侯弘捉得一小鬼，问所持何物？曰：杀人以此矛戟中心腹者，无不辄死。弘曰：治此有方否？鬼曰：以乌鸡血敷之即瘥。</small>**骨肉俱黑者良，舌黑者骨肉俱黑。男用雌，女用雄。**<small>女科有乌鸡丸，治百病。</small>
 
 【讲解】**乌骨鸡为养阴退热佳品。**为雉科动物乌骨鸡的肉或除去内脏的全体。
 
