--- a/ok/bc/bc17-0.4.18.0.0.md
+++ b/ok/bc/bc17-0.4.18.0.0.md
@@ -1,6 +1,6 @@
 ### 黑大豆
 
-〔原文〕**甘寒色黑，属水似肾，肾之穀也。**豆有五色，各入五脏。**故能补肾，镇心，**肾水足则心火宁。**明目，**肾水足则目明。**利水下气，**古方治水肿，每单用，或加他药。**散热祛风，**炒热酒沃，饮其汁，治产后中风危笃及妊娠腰痛，兼能发表。《千金》曰：一以去风，一以消血结。**活血，**《产书》曰：熬令烟绝，酒淋服，下产后余血。**解毒，**苏颂曰：古称大豆解百药毒，试之不然，又加甘草，其验乃奇。**消肿止痛。捣涂一切肿毒；煮食稀痘疮。紧小者良。**小者名马料豆，每晨盐水吞，或盐水煮食，补肾。**畏五参、龙胆、猪肉。忌厚朴。**犯之动气。得前胡、杏仁、牡蛎、石蜜、诸胆汁良。
+〔原文〕**甘寒色黑，属水似肾，肾之穀也。**<small>豆有五色，各入五脏。</small>**故能补肾，镇心，**<small>肾水足则心火宁。</small>**明目，**<small>肾水足则目明。</small>**利水下气，**<small>古方治水肿，每单用，或加他药。</small>**散热祛风，**<small>炒热酒沃，饮其汁，治产后中风危笃及妊娠腰痛，兼能发表。《千金》曰：一以去风，一以消血结。</small>**活血，**<small>《产书》曰：熬令烟绝，酒淋服，下产后余血。</small>**解毒，**<small>苏颂曰：古称大豆解百药毒，试之不然，又加甘草，其验乃奇。</small>**消肿止痛。捣涂一切肿毒；煮食稀痘疮。紧小者良。**<small>小者名马料豆，每晨盐水吞，或盐水煮食，补肾。</small>**畏五参、龙胆、猪肉。忌厚朴。**<small>犯之动气。</small>**得前胡、杏仁、牡蛎、石蜜、诸胆汁良。**
 
 【讲解】**黑大豆补肾、利水、解毒。**为豆科植物大豆的黑色种子。
 
