--- a/ok/bc/bc17-0.4.3.0.0.md
+++ b/ok/bc/bc17-0.4.3.0.0.md
@@ -1,6 +1,6 @@
 ### 天门冬
 
-〔原文〕**甘苦大寒。入手太阴**肺**气分，清金降火，益水之上源；**肺为肾母。**下通足少阴肾，**苦能坚肾，寒能去肾家湿热，故亦治骨痿。**滋肾润燥，止渴消痰，**《蒙筌》曰：肾主津液，燥则凝而为痰，得润剂则痰化，所谓治痰之本也。**泽肌肤，利二便。治肺痿肺痈，**肺痿者，感于风寒咳嗽，短气鼻塞胸胀，久而成痿，有寒痿热痿二证；肺痈者，热毒蕴结，咳吐脓血，胸中隐痛。痿重而痈稍轻，治痿宜养血补气，保肺清火；治痈宜泻热豁痰，开提升散。痈为邪实，痿为正虚，不可误治。**吐脓吐血，**苦泄血滞，甘益元气，寒止血妄行。**痰嗽喘促，消渴嗌干**（1），烦渴引饮，多食善饥为消渴，由火盛津枯。**足下热痛，虚劳骨蒸，阴虚有火之证。然性冷利，胃虚无热及泻者忌用。取肥大明亮者，去心皮酒蒸。地黄、贝母为使。恶鲤鱼。二冬熬膏并良。**天冬滋阴助元消肾痰，麦冬清心降火止肺咳。
+〔原文〕**甘苦大寒。入手太阴**<small>肺</small>**气分，清金降火，益水之上源；**<small>肺为肾母。</small>**下通足少阴肾，**<small>苦能坚肾，寒能去肾家湿热，故亦治骨痿。</small>**滋肾润燥，止渴消痰，**<small>《蒙筌》曰：肾主津液，燥则凝而为痰，得润剂则痰化，所谓治痰之本也。</small>**泽肌肤，利二便。治肺痿肺痈，**<small>肺痿者，感于风寒咳嗽，短气鼻塞胸胀，久而成痿，有寒痿热痿二证；肺痈者，热毒蕴结，咳吐脓血，胸中隐痛。痿重而痈稍轻，治痿宜养血补气，保肺清火；治痈宜泻热豁痰，开提升散。痈为邪实，痿为正虚，不可误治。</small>**吐脓吐血，**<small>苦泄血滞，甘益元气，寒止血妄行。</small>**痰嗽喘促，消渴嗌干**（1），<small>烦渴引饮，多食善饥为消渴，由火盛津枯。</small>**足下热痛，虚劳骨蒸，阴虚有火之证。然性冷利，胃虚无热及泻者忌用。取肥大明亮者，去心皮酒蒸。地黄、贝母为使。恶鲤鱼。二冬熬膏并良。**<small>天冬滋阴助元消肾痰，麦冬清心降火止肺咳。</small>
 
 【讲解】（1）嗌干：指咽喉干燥。
 
