--- a/ok/bc/bc17-0.4.4.0.0.md
+++ b/ok/bc/bc17-0.4.4.0.0.md
@@ -1,6 +1,6 @@
 ### 石斛
 
-〔原文〕**甘淡入脾，而除虚热；咸平入肾，而涩元气，益精，强阴，暖水脏，平胃气，补虚劳，壮筋骨。疗风痹脚弱，发热自汗，梦遗滑精，囊湿余沥。**雷斅曰：石斛镇髓。昂按：石斛石生之草，体瘦无汁，味淡难出，置之煎剂，猝难见功，必须熬膏，用之为良。**光泽如金钗，股短而中实，生石上者良，名金钗石斛。长而虚者名水斛，不堪用。去头根，酒浸用。恶巴豆。畏僵蚕。细锉水浸，熬膏更良。**
+〔原文〕**甘淡入脾，而除虚热；咸平入肾，而涩元气，益精，强阴，暖水脏，平胃气，补虚劳，壮筋骨。疗风痹脚弱，发热自汗，梦遗滑精，囊湿余沥。**<small>雷斅曰：石斛镇髓。昂按：石斛石生之草，体瘦无汁，味淡难出，置之煎剂，猝难见功，必须熬膏，用之为良。</small>**光泽如金钗，股短而中实，生石上者良，名金钗石斛。长而虚者名水斛，不堪用。去头根，酒浸用。恶巴豆。畏僵蚕。细锉水浸，熬膏更良。**
 
 【讲解】**石斛功专养胃阴，清虚热。**为兰科多年生常绿草本植物金钗石斛及同属多种植物茎。夏秋采收，晒干，切段用为干石斛。可栽于沙石内，随用随取，为鲜石斛。
 
