--- a/ok/bc/bc17-0.4.5.0.0.md
+++ b/ok/bc/bc17-0.4.5.0.0.md
@@ -1,6 +1,6 @@
 ### 萎蕤
 
-〔原文**〕甘平。补中益气，润心肺，悦颜色，除烦渴。治风淫湿毒，目痛眦烂，**风湿。**寒热痁疟，**痁，诗廉切，亦疟也。**中风暴热，不能动摇，头痛腰痛，**凡头痛不止者属外感，宜发散；乍痛乍止者属内伤，宜补虚。又有偏头痛者，左属风与血虚，右属痰热与气虚。腰痛亦有肾虚、气滞、痰积、血瘀、风寒、湿热之不同，凡挟虚挟风湿者，宜蒌蕤。**茎寒（1）自汗。一切不足之证，用代参芪，不寒不燥，大有殊功。**昂按：萎蕤温润甘平，中和之品，若蜜制作丸，服之数斤，自有殊功，与服何首乌、地黄者，同一理也。若仅加数分于煎剂，以为可代参芪，则失之远矣。大抵此药性缓，久服方能见功，而所主者，多风湿虚劳之缓证，故臞仙以之服食，南阳用治风湿，《千金》、《外台》亦间用之，未尝恃之为重剂也。若急虚之证，必须参芪，方能复脉回阳，斯时即用萎蕤斤许，亦不敌参芪数分也。时医因李时珍有可代参芪之语，凡遇虚证，辄加用之，曾何益于病者之分毫哉！拙著方解，欲采蒌蕤古方可以入补剂者，终不可得，则古人之罕用，亦可见矣。**似黄精而差小，黄白多须。**二药功用相近，而萎蕤更胜。**竹刀刮去皮节，蜜水或酒浸蒸用。畏碱卤。**陶弘景曰：《本经》有女萎无萎蕤；《别录》有萎蕤无女萎，功用正同，疑名异尔。玉竹、黄精用以调脾肺最为合宜，皆润不助湿，燥不碍肺。
+〔原文**〕甘平。补中益气，润心肺，悦颜色，除烦渴。治风淫湿毒，目痛眦烂，**<small>风湿。</small>**寒热痁疟，**<small>痁，诗廉切，亦疟也。</small>**中风暴热，不能动摇，头痛腰痛，**<small>凡头痛不止者属外感，宜发散；乍痛乍止者属内伤，宜补虚。又有偏头痛者，左属风与血虚，右属痰热与气虚。腰痛亦有肾虚、气滞、痰积、血瘀、风寒、湿热之不同，凡挟虚挟风湿者，宜蒌蕤。</small>**茎寒（1）自汗。一切不足之证，用代参芪，不寒不燥，大有殊功。**<small>昂按：萎蕤温润甘平，中和之品，若蜜制作丸，服之数斤，自有殊功，与服何首乌、地黄者，同一理也。若仅加数分于煎剂，以为可代参芪，则失之远矣。大抵此药性缓，久服方能见功，而所主者，多风湿虚劳之缓证，故臞仙以之服食，南阳用治风湿，《千金》、《外台》亦间用之，未尝恃之为重剂也。若急虚之证，必须参芪，方能复脉回阳，斯时即用萎蕤斤许，亦不敌参芪数分也。时医因李时珍有可代参芪之语，凡遇虚证，辄加用之，曾何益于病者之分毫哉！拙著方解，欲采蒌蕤古方可以入补剂者，终不可得，则古人之罕用，亦可见矣。</small>**似黄精而差小，黄白多须。**<small>二药功用相近，而萎蕤更胜。</small>**竹刀刮去皮节，蜜水或酒浸蒸用。畏碱卤。**<small>陶弘景曰：《本经》有女萎无萎蕤；《别录》有萎蕤无女萎，功用正同，疑名异尔。玉竹、黄精用以调脾肺最为合宜，皆润不助湿，燥不碍肺。</small>
 
 【讲解】（1）茎寒：又称“阴头寒”、“阴冷”，指男子前阴自觉寒冷之证。
 
