--- a/ok/bc/bc17-0.4.6.0.0.md
+++ b/ok/bc/bc17-0.4.6.0.0.md
@@ -1,6 +1,6 @@
 ### 黄精
 
-〔原文〕**甘平。补中益气，安五脏，益脾胃，润心肺，填精髓，助筋骨，除风湿，下三虫。以其得坤土之精粹，久服不饥。**气满则不饥。脂川有人虐使婢，婢逃入山，拔草根食之甚美，久食不饥。夜宿树下，见草动，疑为虎，上树避之，及晓而下，凌空若飞鸟。家人采薪见之，告其主，设网捕不得。或曰：此岂有仙骨，不过服食灵药耳。遂设酒馔于路，果来食之，食讫，遂不能去。擒而询之，指所食之草，乃黄精也。**俗名山生姜，九蒸九晒用。**仙家以为芝草之类，服之长生。
+〔原文〕**甘平。补中益气，安五脏，益脾胃，润心肺，填精髓，助筋骨，除风湿，下三虫。以其得坤土之精粹，久服不饥。**<small>气满则不饥。脂川有人虐使婢，婢逃入山，拔草根食之甚美，久食不饥。夜宿树下，见草动，疑为虎，上树避之，及晓而下，凌空若飞鸟。家人采薪见之，告其主，设网捕不得。或曰：此岂有仙骨，不过服食灵药耳。遂设酒馔于路，果来食之，食讫，遂不能去。擒而询之，指所食之草，乃黄精也。</small>**俗名山生姜，九蒸九晒用。**<small>仙家以为芝草之类，服之长生。</small>
 
 【讲解】**黄精既能补气，又能养阴，兼能益精。**为百合科多年生草本植物黄精以及同属若干种植物的根。挖根晒干，切片入药为生黄精。古代医家认为黄精生用刺激咽喉，多经蒸制后入药，尤以九蒸九晒后呈黄黑色者为佳。
 
