--- a/ok/bc/bc17-0.4.7.0.0.md
+++ b/ok/bc/bc17-0.4.7.0.0.md
@@ -1,6 +1,6 @@
 ### 百合
 
-〔原文〕**甘平。润肺宁心，清热止嗽，益气调中，止涕泪，**涕泪，肺肝热也。经曰：肺为涕，肝为泪，心为汗，脾为涎，肾为唾。**利二便。治浮肿胪胀，痞满寒热，疮肿乳痈，伤寒百合病。**行住坐卧不安，如有鬼神状。苏颂曰：病名百合，而用百合治之，不识其义。李士材曰：亦清心安神之效耳。朱二允曰：久嗽之人，肺气必虚，虚则宜敛。百合之甘敛，胜于五味之酸收。**花白者入药。**
+〔原文〕**甘平。润肺宁心，清热止嗽，益气调中，止涕泪，**<small>涕泪，肺肝热也。经曰：肺为涕，肝为泪，心为汗，脾为涎，肾为唾。</small>**利二便。治浮肿胪胀，痞满寒热，疮肿乳痈，伤寒百合病。**<small>行住坐卧不安，如有鬼神状。苏颂曰：病名百合，而用百合治之，不识其义。李士材曰：亦清心安神之效耳。朱二允曰：久嗽之人，肺气必虚，虚则宜敛。百合之甘敛，胜于五味之酸收。</small>**花白者入药。**
 
 【讲解】**百合功专润肺止咳，清心安神。**为百合科多年生草本植物百合和细叶百合的肉质鳞茎。剥取鳞茎，沸水烫或蒸后晒干入药。生用或炙用。
 
