--- a/ok/bc/bc17-0.4.8.0.0.md
+++ b/ok/bc/bc17-0.4.8.0.0.md
@@ -1,8 +1,8 @@
 ### 枸杞子  枸杞叶
 
-〔原文〕**甘平。**本草苦寒。**润肺清肝，滋肾益气，生精助阳，补虚劳，强筋骨，**肝主筋，肾主骨。**去风明目，**目为肝窍，瞳子属肾。**利大小肠。治嗌干消渴。**昂按：古谚有云：出家千里，勿食枸杞。其色赤属火，能补精壮阳，然气味甘寒而性润，仍是补水之药，所以能滋肾益肝明目，而治消渴也。**南方树高数尺，北方并是大树，以甘州所产红润少核者良。酒浸捣用。根名地骨皮。**见下。
+〔原文〕**甘平。**<small>本草苦寒。</small>**润肺清肝，滋肾益气，生精助阳，补虚劳，强筋骨，**<small>肝主筋，肾主骨。</small>**去风明目，**<small>目为肝窍，瞳子属肾。</small>**利大小肠。治嗌干消渴。**<small>昂按：古谚有云：出家千里，勿食枸杞。其色赤属火，能补精壮阳，然气味甘寒而性润，仍是补水之药，所以能滋肾益肝明目，而治消渴也。</small>**南方树高数尺，北方并是大树，以甘州所产红润少核者良。酒浸捣用。根名地骨皮。**<small>见下。</small>
 
-**枸杞叶：名天精草，苦甘而凉，清上焦心肺客热。代茶止消渴。**李时珍曰：皆三焦气分之药。
+**枸杞叶：名天精草，苦甘而凉，清上焦心肺客热。代茶止消渴。**<small>李时珍曰：皆三焦气分之药。</small>
 
 【讲解】**枸杞甘润，为滋补肝肾而明目之要药。**为茄科落叶灌木植物宁夏枸杞和枸杞的成熟果实。主产于宁夏、甘肃等地，以产于宁夏者质最优，称宁枸杞。生用，也可熟食浸酒服用。
 
