--- a/ok/bc/bc17-0.4.9.0.0.md
+++ b/ok/bc/bc17-0.4.9.0.0.md
@@ -1,6 +1,6 @@
 ### 旱莲草
 
-〔原文〕**甘咸，汁黑。补肾止血，黑发乌髭。**《千金》曰：当及时多收，其效甚速。《经疏》曰：性凉不益脾胃。故《千金方》金陵煎丸，用姜汁和剂。**苗如旋覆，实似莲房，断之有汁，须臾而黑。熬膏良。**
+〔原文〕**甘咸，汁黑。补肾止血，黑发乌髭。**<small>《千金》曰：当及时多收，其效甚速。《经疏》曰：性凉不益脾胃。故《千金方》金陵煎丸，用姜汁和剂。</small>**苗如旋覆，实似莲房，断之有汁，须臾而黑。熬膏良。**
 
 【讲解】**旱莲草功能补肾益阴、凉血止血。**为菊科一年生草本植物鳢肠的全草。又名鳢肠草、金陵草。揉搓其茎叶有黑色汁液流出，故又名墨旱莲。晒干切断，生用。
 
