--- a/ok/bc/bc18-0.0.1.0.0.md
+++ b/ok/bc/bc18-0.0.1.0.0.md
@@ -1,6 +1,6 @@
 ### 山茱萸
 
-**〔原文〕辛温酸涩，补肾温肝**，入二经气分。**固精秘气，强阴助阳，安五脏，通九窍**，《圣济》云：如何涩剂以通九窍？《经疏》云：精气充则九窍通利。昂按：山茱通九窍，古今疑之，得《经疏》一言，而意旨豁然。始叹前人识见深远，不易测知， 多有如此类者，即《经疏》一语而扩充之，实可发医人之慧悟也。**暖腰膝，缩小便。治风寒湿痹**，温肝故    逐风。**鼻塞目黄**，肝虚邪客则目黄。**耳鸣耳聋**。肾虚则耳鸣耳聋，皆固精通窍之功。王好古曰：滑则气脱，涩剂所以收之，仲景八味丸用之为君，其性味可知矣。 昂按：《别录》、甄权，皆云能发汗，恐属误文，酸剂敛涩，何以反发？仲景亦安取发汗之药以为君乎？李士材曰：酸属东方，而功多在北方者，乙癸同源也。肝为乙木，肾为癸水。**去核用**。核能滑精。恶桔梗、防风、防己。
+**〔原文〕辛温酸涩，补肾温肝**，<small>入二经气分。</small>**固精秘气，强阴助阳，安五脏，通九窍**，<small>《圣济》云：如何涩剂以通九窍？《经疏》云：精气充则九窍通利。昂按：山茱通九窍，古今疑之，得《经疏》一言，而意旨豁然。始叹前人识见深远，不易测知， 多有如此类者，即《经疏》一语而扩充之，实可发医人之慧悟也。</small>**暖腰膝，缩小便。治风寒湿痹**，<small>温肝故    逐风。</small>**鼻塞目黄**，<small>肝虚邪客则目黄。</small>**耳鸣耳聋**。<small>肾虚则耳鸣耳聋，皆固精通窍之功。王好古曰：滑则气脱，涩剂所以收之，仲景八味丸用之为君，其性味可知矣。 昂按：《别录》、甄权，皆云能发汗，恐属误文，酸剂敛涩，何以反发？仲景亦安取发汗之药以为君乎？李士材曰：酸属东方，而功多在北方者，乙癸同源也。肝为乙木，肾为癸水。</small>**去核用**。<small>核能滑精。</small>**恶桔梗、防风、防己。**
 
 【讲解】**山茱萸酸涩质润，为平补肝肾之品，又可涩精止汗**。为山茱萸科落叶小乔木植物山茱萸除去果核的果肉，又名山萸肉。晒干、生用。
 
