--- a/ok/bc/bc18-0.0.11.0.0.md
+++ b/ok/bc/bc18-0.0.11.0.0.md
@@ -1,7 +1,6 @@
 ### 海螵蛸
 
-**〔原文〕咸走血，温和血，入肝肾血分。通血脉，柱寒湿，治血枯**，《内经》：血枯治之以乌鰂骨。**血瘕，血崩，血闭，腹痛环脐，阴蚀肿痛**，烧末酒服。 **疟痢疳虫，目翳泪出，聍耳出脓**， 性能燥脓收水，为末加麝少许掺入。**厥阴少阴**肝肾。**经病。出东海，亦名墨鱼**。腹中有墨，书字逾年乃灭，常吐黑水，自罩其身，人即于黑水处取之。
-**取鱼骨卤浸炙黄用。恶附子、白芨、白蔹。能淡盐**。
+**〔原文〕咸走血，温和血，入肝肾血分。通血脉，柱寒湿，治血枯**，<small>《内经》：血枯治之以乌鰂骨。</small>**血瘕，血崩，血闭，腹痛环脐，阴蚀肿痛**，<small>烧末酒服。</small> **疟痢疳虫，目翳泪出，聍耳出脓**，<small> 性能燥脓收水，为末加麝少许掺入。</small>**厥阴少阴**<small>肝肾。</small>**经病。出东海，亦名墨鱼**。<small>腹中有墨，书字逾年乃灭，常吐黑水，自罩其身，人即于黑水处取之。</small>**取鱼骨卤浸炙黄用。恶附子、白芨、白蔹。能淡盐**。
 
 【讲解】**海螵蛸功专收敛，有止血止带固精作用**。为乌鰂科动物曼氏无针乌鰂或金乌鰂的内贝壳。《本经》原名乌贼骨。 生用为主。
 
