--- a/ok/bc/bc18-0.0.13.0.0.md
+++ b/ok/bc/bc18-0.0.13.0.0.md
@@ -1,8 +1,8 @@
 ### 莲 子
 
-**〔原文〕甘温而涩，脾之果也，脾者黄宫， 故能交水火而媾心肾，安靖上下君相火邪**，古方治心肾不交劳伤白浊，有莲子清心饮，补心肾有瑞莲丸。 **益十二经脉血 气，涩精气，厚肠胃，除寒热。治脾泄久痢，白浊梦遗，女人崩带及诸血病。大便燥者勿服。去心皮， 蒸熟焙干用。得茯苓、山药、白术、枸杞良**。
+**〔原文〕甘温而涩，脾之果也，脾者黄宫， 故能交水火而媾心肾，安靖上下君相火邪**，<small>古方治心肾不交劳伤白浊，有莲子清心饮，补心肾有瑞莲丸。</small> **益十二经脉血 气，涩精气，厚肠胃，除寒热。治脾泄久痢，白浊梦遗，女人崩带及诸血病。大便燥者勿服。去心皮， 蒸熟焙干用。得茯苓、山药、白术、枸杞良**。
 
-**黑而沉水者为石莲，清心除烦，开胃进食。专治噤口痢淋浊诸证**。石莲入水则沉，入卤汁浮。煎盐人以之试卤， 莲浮至顶，卤乃可煎，落田野中者，百年不坏，人得食之，髮黑不老。肆中石莲，产广中树上，其味大苦，不宜入药。
+**黑而沉水者为石莲，清心除烦，开胃进食。专治噤口痢淋浊诸证**。<small>石莲入水则沉，入卤汁浮。煎盐人以之试卤， 莲浮至顶，卤乃可煎，落田野中者，百年不坏，人得食之，髮黑不老。肆中石莲，产广中树上，其味大苦，不宜入药。</small>
 
 **莲心为末，米饮下，疗产后血竭**。
 
