--- a/ok/bc/bc18-0.0.3.0.0.md
+++ b/ok/bc/bc18-0.0.3.0.0.md
@@ -1,6 +1,6 @@
 ### 五倍子
 
-**〔原文〕咸酸，其性涩，能敛肺；其气寒，能降火。生津化痰，止嗽止血，敛汗**，郑赞寰曰：焙研极细，以自己漱口水调敷肪上，止盗汗如神。**解酒**。**疗消渴泄痢， 疮癣五痔，下血脱肛，脓水湿烂，子肠坠下。散热毒，消目肿**，煎水洗之。**敛疮口**。热散，疮口自敛。**其色黑，能染须**。朱丹溪曰：倍子属金与水，噙之善收顽痰，解热毒。黄昏咳嗽，乃火浮肺中，不宜用凉药，宜五倍，五味，敛而降之。《医学纲目》云：王元珪虚而滑精，屡与加味四物汤，吞河间秘真丸及珍珠粉丸不止，后用五倍子一两，茯苓二两，丸服遂愈。此则倍子敛涩之功，敏于龙骨、蛤粉也。昂按：凡用秘涩药，能通而后能秘。此方用茯苓倍于五倍，一泻一收，是以能尽其妙也。**嗽由外感，泻非虚脱者禁用，生盐肤木上，乃小虫食汁，遗种结毬于叶间**。故主治之证，与盐肤子叶同功。**壳轻脆而中虚，可以染皂，或生或炒用**。
+**〔原文〕咸酸，其性涩，能敛肺；其气寒，能降火。生津化痰，止嗽止血，敛汗**，<small>郑赞寰曰：焙研极细，以自己漱口水调敷肪上，止盗汗如神。</small>**解酒**。**疗消渴泄痢， 疮癣五痔，下血脱肛，脓水湿烂，子肠坠下。散热毒，消目肿**，<small>煎水洗之。</small>**敛疮口**。<small>热散，疮口自敛。</small>**其色黑，能染须**。<small>朱丹溪曰：倍子属金与水，噙之善收顽痰，解热毒。黄昏咳嗽，乃火浮肺中，不宜用凉药，宜五倍，五味，敛而降之。《医学纲目》云：王元珪虚而滑精，屡与加味四物汤，吞河间秘真丸及珍珠粉丸不止，后用五倍子一两，茯苓二两，丸服遂愈。此则倍子敛涩之功，敏于龙骨、蛤粉也。昂按：凡用秘涩药，能通而后能秘。此方用茯苓倍于五倍，一泻一收，是以能尽其妙也。</small>**嗽由外感，泻非虚脱者禁用，生盐肤木上，乃小虫食汁，遗种结毬于叶间**。<small>故主治之证，与盐肤子叶同功。</small>**壳轻脆而中虚，可以染皂，或生或炒用**。
 
  【讲解】**五倍子有敛肺降火，涩肠止泻，固精，敛汗止血之功**。为漆树科落叶灌木或小乔木植物盐肤木或同属植物青麸杨等叶上寄生的虫瘿。形状不规则，有略呈圆形者，有形如菱角者， 外表灰褐色，质脆中空。九〜十月采下虫癭，煮死内部寄生之虫， 干燥备用。
 
