--- a/ok/bc/bc18-0.0.5.0.0.md
+++ b/ok/bc/bc18-0.0.5.0.0.md
@@ -1,10 +1,10 @@
 ### 乌 梅
 
-**〔原文〕酸涩而温，脾肺血分之果。敛肺**， 肺欲收，急食酸以收之。**涩肠，涌痰消肿，清热解毒，生津止渴，醒酒杀虫。治久嗽泻痢**，梁庄肃公血痢，陈应之用乌梅、胡黄连、灶下土等分为末，茶调服而愈。曾鲁公血痢百余日，国医不能疗，应之用盐梅肉研烂，合腊茶入醋服，一啜而安。**瘴疟**，诸证初起者，皆忌用。**霍乱，吐逆反胃，劳热骨蒸**。皆取其酸收。 **安？厥**，？虫上攻而眩仆，虫得酸则伏，仲景有？厥乌梅丸。**去黑痣，蚀恶肉**。痈疮后生恶肉，烧梅存性，研末敷之。**多食损齿伤筋**。经曰：酸走筋，筋病无多食酸。
+**〔原文〕酸涩而温，脾肺血分之果。敛肺**， <small>肺欲收，急食酸以收之。</small>**涩肠，涌痰消肿，清热解毒，生津止渴，醒酒杀虫。治久嗽泻痢**，<small>梁庄肃公血痢，陈应之用乌梅、胡黄连、灶下土等分为末，茶调服而愈。曾鲁公血痢百余日，国医不能疗，应之用盐梅肉研烂，合腊茶入醋服，一啜而安。</small>**瘴疟**，<small>诸证初起者，皆忌用。</small>**霍乱，吐逆反胃，劳热骨蒸**。<small>皆取其酸收。</small> **安蚘厥**，蚘虫上攻而眩仆，虫得酸则伏，仲景有蚘厥乌梅丸。**去黑痣，蚀恶肉**。<small>痈疮后生恶肉，烧梅存性，研末敷之。</small>**多食损齿伤筋**。<small>经曰：酸走筋，筋病无多食酸。</small>
 
-**白梅，功用略同。治痰厥僵仆，牙关紧闭**，取肉揩擦牙龈，涎出即开，盖酸先入筋，齿软则易开。若用铁器撬开，恐伤其齿。**惊痫喉痹，敷乳痈肿毒，刺入肉中**。嚼烂罨之即出， 疮中胬肉，捣饼贴之即收。
+**白梅，功用略同。治痰厥僵仆，牙关紧闭**，<small>取肉揩擦牙龈，涎出即开，盖酸先入筋，齿软则易开。若用铁器撬开，恐伤其齿。</small>**惊痫喉痹，敷乳痈肿毒，刺入肉中**。<small>嚼烂罨之即出， 疮中胬肉，捣饼贴之即收。</small>
 
-**青梅，薰黑为乌梅**，稻灰汁淋蒸则不囊。孟诜曰：乌梅十颗，汤煮去核，纳肛中，通大便。**盐渍为白梅**。李时珍曰：梅花于冬而实，于夏得木之全气，故最酸。胆为甲木，肝为乙木，人舌下有四窍，两通胆液，故食酸则津生。食梅齿？者，嚼胡桃即解。衣生霉点者，梅叶煎汤洗之，捣洗葛衣亦佳。
+**青梅，薰黑为乌梅**，<small>稻灰汁淋蒸则不囊。孟诜曰：乌梅十颗，汤煮去核，纳肛中，通大便。</small>**盐渍为白梅**。<small>李时珍曰：梅花于冬而实，于夏得木之全气，故最酸。胆为甲木，肝为乙木，人舌下有四窍，两通胆液，故食酸则津生。食梅齿？者，嚼胡桃即解。衣生霉点者，梅叶煎汤洗之，捣洗葛衣亦佳。</small>
 
 【讲解】**乌梅具有敛肺涩肠、生津安蛔之功**。为蔷薇科落叶乔木植物梅树的未成熟果实(青梅〉的加工熏制品。去核生用， 或炒炭用。	
 
