--- a/ok/bc/bc18-0.0.6.0.0.md
+++ b/ok/bc/bc18-0.0.6.0.0.md
@@ -1,6 +1,6 @@
 ### 肉豆蔻
 
-〔原文〕**辛温气香。理气暖胃，下气调中， 逐冷祛痰，消食解酒。治冷积心腹胀痛**，挟痰挟食者并宜之。**中恶吐沫，小儿吐逆，乳食不下。又能涩大肠，止虚泻冷痢**。初起忌用。**出岭南，似草蔻，外有皱纹，内有斑纹。糯米粉裹煨熟用。忌铁**。
+〔原文〕**辛温气香。理气暖胃，下气调中， 逐冷祛痰，消食解酒。治冷积心腹胀痛**，<small>挟痰挟食者并宜之。</small>**中恶吐沫，小儿吐逆，乳食不下。又能涩大肠，止虚泻冷痢**。<small>初起忌用。</small>**出岭南，似草蔻，外有皱纹，内有斑纹。糯米粉裹煨熟用。忌铁**。
 
 【讲解】**肉豆蔻功专涩肠止泻，兼能温中行气**。为豆蔻科高大乔木植物肉豆蔻树的成熟种仁。别名肉果。干燥种仁外表灰棕色至棕色，粗糙，有网状沟纹，橫断面有槟榔花纹。主产马来西 亚及印度尼西亚，我国广东亦有栽培。以面裹煨熟去油入药用。
 
