--- a/ok/bc/bc18-0.0.9.0.0.md
+++ b/ok/bc/bc18-0.0.9.0.0.md
@@ -1,6 +1,6 @@
 ### 禹余粮
 
-**〔原文〕甘平性涩，手足阳明**大肠、胃。**血分重剂。治咳逆下痢，血闭**癥瘕。**血崩，能固下**，李先知曰：下焦有病，人难会，须用余粮赤石脂。**又能催生。石中黄粉，生于池泽，无砂者良。牡丹为使**。
+**〔原文〕甘平性涩，手足阳明**<small>大肠、胃。</small>**血分重剂。治咳逆下痢，血闭**<small>癥瘕。</small>**血崩，能固下**，<small>李先知曰：下焦有病，人难会，须用余粮赤石脂。</small>**又能催生。石中黄粉，生于池泽，无砂者良。牡丹为使**。
 
 【讲解】**禹余粮功专收涩与赤石脂功效近似，亦以涩肠止泻为其主要功效**。为斜方晶系褐铁矿石，系黄褐色不规则的块状，打碎呈赭褐色细末， 含氧化铁粉块和粘土等。
 
