--- a/ok/bc/bc18-0.0.21.0.0.md
+++ b/ok/bc/bc18-0.0.21.0.0.md
@@ -1,6 +1,6 @@
 ### 罂粟壳
 
-**〔原文〕酸涩微寒，敛肺涩肠而固肾。治久嗽泻痢，遗精脱肛，心腹筋骨诸痛**。李东垣曰：收涩固气，能入肾，故治骨病尤宜。**嗽痢初起者忌用。**朱丹溪曰：此是收后药，要先除病根。**一名丽春花，红黄紫白，艳丽可爱。凡使壳，洗去蒂及筋膜，取薄皮，醋炒或蜜炒用**。性紧涩，不制多令人吐逆。**得醋、乌梅、陈皮良。罂中有米极细，甘寒润燥，煮粥食，治反胃**。加参尤佳。
+**〔原文〕酸涩微寒，敛肺涩肠而固肾。治久嗽泻痢，遗精脱肛，心腹筋骨诸痛**。<small>李东垣曰：收涩固气，能入肾，故治骨病尤宜。</small>**嗽痢初起者忌用。**<small>朱丹溪曰：此是收后药，要先除病根。</small>**一名丽春花，红黄紫白，艳丽可爱。凡使壳，洗去蒂及筋膜，取薄皮，醋炒或蜜炒用**。<small>性紧涩，不制多令人吐逆。</small>**得醋、乌梅、陈皮良。罂中有米极细，甘寒润燥，煮粥食，治反胃**。<small>加参尤佳。</small>
 
 【讲解】**罂粟壳具有敛肺、涩肠、止痛之功**。为罂粟科一年生或二年生草本植物罂粟的成熟蒴果的外壳。又名米壳、御米壳。干燥果壳略呈球形，内部空洞质轻。原产于欧洲南部，我国也有少量栽培。果实成熟时摘下晒干，去蒂及种子，用时醋炒或蜜炙用。
 
