--- a/ok/bc/bc18-0.0.22.0.0.md
+++ b/ok/bc/bc18-0.0.22.0.0.md
@@ -1,6 +1,6 @@
 ### 剌猬皮
 
-**〔原文〕苦平。治肠风泻血，五痔**， 烧末，油调敷，水服亦佳。 **阴肿。脂滴耳中治聋，胆点痘后风眼。 似鼠而圆大，褐色，攒毛，外如栗房，煅黑存性用**。
+**〔原文〕苦平。治肠风泻血，五痔**，<small> 烧末，油调敷，水服亦佳。</small> **阴肿。脂滴耳中治聋，胆点痘后风眼。 似鼠而圆大，褐色，攒毛，外如栗房，煅黑存性用**。
 
 【讲解】**刺猬皮具有收敛止血、固精缩尿的作用**。为刺猬科动物刺猬的干燥外皮。捕后剥取其皮，摊开阴干。切成小块， 炒焦用。	
 
