--- a/ok/bc/bc19-0.0.3.0.0.md
+++ b/ok/bc/bc19-0.0.3.0.0.md
@@ -1,6 +1,6 @@
 ### 胆矾
 
-〔原文〕**酸涩辛寒，入少阳胆经。性敛而能上行，涌吐风热痰涎，发散风木相火。治喉痹，**醋调咽，吐痰涎立效。**咳逆，痉痫崩淋。能杀虫，治牙虫疮毒阴蚀，产铜坑中，乃铜之精液，**故能入肝胆，治风木。磨铁作铜色者真。形似空青鸭嘴色为上。市人多以醋揉青矾伪之。**畏桂、芫花、辛夷、白薇。**
+〔原文〕**酸涩辛寒，入少阳胆经。性敛而能上行，涌吐风热痰涎，发散风木相火。治喉痹，**<small>醋调咽，吐痰涎立效。</small>**咳逆，痉痫崩淋。能杀虫，治牙虫疮毒阴蚀，产铜坑中，乃铜之精液，**<small>故能入肝胆，治风木。</small>**磨铁作铜色者真。形似空青鸭嘴色为上。**<small>市人多以醋揉青矾伪之。</small>**畏桂、芫花、辛夷、白薇。**
 
 【讲解】**胆矾催吐作用强烈，外用能收湿、蚀疮、去腐。**系铜矿中自然生成的结晶或人工制造的含水硫酸铜。呈大小不一的半透明斜方形棱柱状结晶体，色淡蓝或深蓝，质脆易碎。容易与皂矾混淆，鉴别之法：以之磨于铁上而呈铜色者为真品。研末或煅后研末用。
 
