--- a/ok/bc/bc19-0.0.4.0.0.md
+++ b/ok/bc/bc19-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 藜芦
 
-〔原文〕**辛寒至苦有毒，入口即吐，善通顶，令人嚏，风痫证多用之。**张子和曰：一妇病风痫，初一二年一作，后渐日作，甚至一日数作，求死而已。值岁大饥，采百草食，见野草若葱，采蒸饱食，觉不安，吐胶涎数日，约一二斗，汗出如洗，甚昏困，后遂轻健如常人。以所食葱访人，乃憨葱苗，即藜芦是矣。李时珍曰：和王妃年已七十，中风不省，牙关紧闭，先考太医吏目月池翁诊视，药不得入，不获已打去一齿，浓煎藜芦汤灌之，少顷噫气，遂吐痰而苏。药不瞑眩，厥疾不疗，诚然！**取根去头。用黄连为使。反细辛、芍药、诸参。恶大黄。畏葱白。**吐者服葱汤即止。
+〔原文〕**辛寒至苦有毒，入口即吐，善通顶，令人嚏，风痫证多用之。**<small>张子和曰：一妇病风痫，初一二年一作，后渐日作，甚至一日数作，求死而已。值岁大饥，采百草食，见野草若葱，采蒸饱食，觉不安，吐胶涎数日，约一二斗，汗出如洗，甚昏困，后遂轻健如常人。以所食葱访人，乃憨葱苗，即藜芦是矣。李时珍曰：和王妃年已七十，中风不省，牙关紧闭，先考太医吏目月池翁诊视，药不得入，不获已打去一齿，浓煎藜芦汤灌之，少顷噫气，遂吐痰而苏。药不瞑眩，厥疾不疗，诚然！</small>**取根去头。用黄连为使。反细辛、芍药、诸参。恶大黄。畏葱白。**<small>吐者服葱汤即止。</small>
 
 【讲解】**藜芦功专涌吐风痰，兼可杀虫。**为百合科多年生草本植物黑藜芦的根茎。晒干入药。
 
