--- a/ok/bc/bc20-0.1.0.0.0.md
+++ b/ok/bc/bc20-0.1.0.0.0.md
@@ -1,6 +1,6 @@
 ## 雄黄
 
-**〔原文〕辛温有毒，得正阳之气。入肝经血分，搜肝强脾，散百节大风，杀百毒，辟鬼魅。治惊痫痰涎，头痛眩晕，暑疟澼痢，泄泻积聚。**虞雍公道中冒暑，泄痢连月，梦至仙居，延之坐，壁中有词云：暑毒在脾，湿气连脚；不泄则痢，不痢则疟，独炼雄黄，蒸饼和药，甘草作汤，食之安乐，别作治疗，医家大错。如方服遂愈。**又能化血为水，燥湿杀虫，治劳疳疮疥蛇伤。赤似鸡冠，明彻不臭，重三五两者良。**孕妇佩之，转女成男。**醋浸，入莱菔汁煮，干用。生山阴者名雌黄，功用略同。劣者名熏黄，烧之则臭，只堪熏疮疥、杀虫虱。**
+**〔原文〕辛温有毒，得正阳之气。入肝经血分，搜肝强脾，散百节大风，杀百毒，辟鬼魅。治惊痫痰涎，头痛眩晕，暑疟澼痢，泄泻积聚。**<small>虞雍公道中冒暑，泄痢连月，梦至仙居，延之坐，壁中有词云：暑毒在脾，湿气连脚；不泄则痢，不痢则疟，独炼雄黄，蒸饼和药，甘草作汤，食之安乐，别作治疗，医家大错。如方服遂愈。</small>**又能化血为水，燥湿杀虫，治劳疳疮疥蛇伤。赤似鸡冠，明彻不臭，重三五两者良。**<small>孕妇佩之，转女成男。</small>**醋浸，入莱菔汁煮，干用。生山阴者名雌黄，功用略同。劣者名熏黄，烧之则臭，只堪熏疮疥、杀虫虱。**
 
 【讲解】**雄黄功专解毒，杀虫。**为含砷的结晶矿石（二硫化砷）。为红黄色不透明固体。
 
