--- a/ok/bc/bc20-0.10.0.0.0.md
+++ b/ok/bc/bc20-0.10.0.0.0.md
@@ -1,6 +1,6 @@
 ## 明矾
 
-**〔原文〕酸咸而寒，性涩而收。燥湿退涎，化痰坠浊，解毒生津，除风杀虫，止血定痛，通大小便，蚀恶肉，生好肉，除痼热在骨髓。**髓为热所劫则空，故骨痿而齿浮。**治惊痫黄疸、血痛喉痹、齿痛风眼、鼻中瘜肉、崩带脱肛、阴蚀阴挺、**阴肉挺出，肝经之火。**疔肿痈疽、瘰疬疥癣、虎犬蛇虫咬伤。**李时珍曰：能吐风热痰涎，取其酸苦涌泄也；治诸血痛阴挺脱肛疮疡，取其酸涩而收也；治风眼痰饮泄痢崩带，取其收而燥湿也；治喉痹痈蛊蛇伤，取其解毒也。**多服损心肺伤骨。**寇宗爽曰：劫水故也。书纸上，水不能濡，故知其性劫水也。李迅曰：凡发背，当服蜡矾丸以护膜，防毒气内攻。矾一两，黄蜡七钱，溶化和丸，每服十丸，渐加至二十丸，日服百丸则有力。此药护膜托里解毒化脓之功甚大，以白矾、芽茶捣末冷水服，解一切毒。**取洁白光莹者煅用。又法以火煅地，洒水于上，取矾布地，以盘覆之，四面灰拥一日夜，矾飞盘上，扫收之，为矾精，未尽者更如前法，再以陈苦酒**醋也。**化之，名矾华，七日可用，百日弥佳。甘草为使。畏麻黄。恶牡砺。**生用解毒，煅用生肌。
+**〔原文〕酸咸而寒，性涩而收。燥湿退涎，化痰坠浊，解毒生津，除风杀虫，止血定痛，通大小便，蚀恶肉，生好肉，除痼热在骨髓。**<small>髓为热所劫则空，故骨痿而齿浮。</small>**治惊痫黄疸、血痛喉痹、齿痛风眼、鼻中瘜肉、崩带脱肛、阴蚀阴挺、**<small>阴肉挺出，肝经之火。</small>**疔肿痈疽、瘰疬疥癣、虎犬蛇虫咬伤。**<small>李时珍曰：能吐风热痰涎，取其酸苦涌泄也；治诸血痛阴挺脱肛疮疡，取其酸涩而收也；治风眼痰饮泄痢崩带，取其收而燥湿也；治喉痹痈蛊蛇伤，取其解毒也。</small>**多服损心肺伤骨。**<small>寇宗奭曰：劫水故也。书纸上，水不能濡，故知其性劫水也。李迅曰：凡发背，当服蜡矾丸以护膜，防毒气内攻。矾一两，黄蜡七钱，溶化和丸，每服十丸，渐加至二十丸，日服百丸则有力。此药护膜托里解毒化脓之功甚大，以白矾、芽茶捣末冷水服，解一切毒。</small>**取洁白光莹者煅用。又法以火煅地，洒水于上，取矾布地，以盘覆之，四面灰拥一日夜，矾飞盘上，扫收之，为矾精，未尽者更如前法，再以陈苦酒**醋也。**化之，名矾华，七日可用，百日弥佳。甘草为使。畏麻黄。恶牡砺。**<small>生用解毒，煅用生肌。</small>
 
 【讲解】**明矾具有解毒杀虫，燥湿止痒，止血止泻，清热消痰的功效。**为三方晶系明矾石的加工提炼品。一名白矾。无色透明，成八面体结晶块，外面被以白粉，受高热火煅则失去其结晶水，变为轻松似海绵之状，称枯矾。明矾、枯矾皆入药，常研末用。
 
