--- a/ok/bc/bc19-0.0.2.0.0.md
+++ b/ok/bc/bc19-0.0.2.0.0.md
@@ -1,6 +1,6 @@
 ### 常山
 
-〔原文〕**辛苦而寒有毒。能引吐行水，袪老痰积饮，**痰有六：风痰、寒痰、湿痰、热痰、食痰、气痰也；饮有五：流于肺为支饮，于肝为悬饮，于心为伏饮，于经络为溢饮，于肠胃为痰饮也。常山力能吐之下之。**专治诸疟。然悍暴能损真气，弱者慎用。**李时珍曰：常山、蜀漆，劫痰截疟，须发散表邪及提出阳分之后用之。疟有经疟、脏疟、风寒暑湿痰食瘴鬼之别，须分阴阳虚实，不可概论。常山、蜀漆，得甘草则吐；得大黄则利；得乌梅、穿山甲则入肝；得小麦、竹叶则入心；得秫米，麻黄则入肺；得龙骨、附子则入肾；得草果、槟榔则入脾。盖无痰不作疟，一物之功，亦在驱逐痰水而已。李士材曰：常山发吐，唯生用多用为然，与甘草同用亦必吐，若酒浸炒透，但用钱许，每见奇功，未见其或吐也。世人泥于雷𢽾老人久病忌服之说，使良药见疑，沉疴难起，抑何愚也！常山吐疟痰，瓜蒂吐热痰，乌附尖吐湿痰，莱菔子吐气痰，藜芦吐风痰。**鸡骨者良。酒浸蒸或炒用。栝楼为使。忌葱茗。茎叶名蜀漆，功用略同，**古方有蜀漆散，取其苗性轻扬，发散上焦邪热。**甘草水拌蒸。**
+〔原文〕**辛苦而寒有毒。能引吐行水，袪老痰积饮，**<small>痰有六：风痰、寒痰、湿痰、热痰、食痰、气痰也；饮有五：流于肺为支饮，于肝为悬饮，于心为伏饮，于经络为溢饮，于肠胃为痰饮也。常山力能吐之下之。</small>**专治诸疟。然悍暴能损真气，弱者慎用。**<small>李时珍曰：常山、蜀漆，劫痰截疟，须发散表邪及提出阳分之后用之。疟有经疟、脏疟、风寒暑湿痰食瘴鬼之别，须分阴阳虚实，不可概论。常山、蜀漆，得甘草则吐；得大黄则利；得乌梅、穿山甲则入肝；得小麦、竹叶则入心；得秫米，麻黄则入肺；得龙骨、附子则入肾；得草果、槟榔则入脾。盖无痰不作疟，一物之功，亦在驱逐痰水而已。李士材曰：常山发吐，唯生用多用为然，与甘草同用亦必吐，若酒浸炒透，但用钱许，每见奇功，未见其或吐也。世人泥于雷𢽾老人久病忌服之说，使良药见疑，沉疴难起，抑何愚也！常山吐疟痰，瓜蒂吐热痰，乌附尖吐湿痰，莱菔子吐气痰，藜芦吐风痰。</small>**鸡骨者良。酒浸蒸或炒用。栝楼为使。忌葱茗。茎叶名蜀漆，功用略同，**<small>古方有蜀漆散，取其苗性轻扬，发散上焦邪热。</small>**甘草水拌蒸。**
 
 【讲解】**常山功能涌吐痰饮、截疟。**为虎耳草科落叶灌木植物黄常山的根。别名鸡骨常山。根圆柱形，弯曲扭转，表面黄棕色，质坚硬，味苦。以质坚实而重，形如鸡骨者为佳。切片，生用或酒炒。茎、叶名蜀漆，亦供药用。
 
