--- a/ok/bc/bc20-0.13.0.0.0.md
+++ b/ok/bc/bc20-0.13.0.0.0.md
@@ -1,8 +1,8 @@
 ## 蟾蜍
 
-**〔原文〕蟾土精而应月魄，辛凉微毒，入阳明胃。发汗退热，除湿杀虫。治疮疽发背，**未成者，用活蟾蜍系疮上，半日，蟾必昏愤，置水中救其命，再易一个，三易则毒散矣；势重者，剖蟾蜍合疮上，不久必臭不可闻。如此二三易，其肿自愈。**小儿劳瘦疳疾。**
+**〔原文〕蟾土精而应月魄，辛凉微毒，入阳明胃。发汗退热，除湿杀虫。治疮疽发背，**<small>未成者，用活蟾蜍系疮上，半日，蟾必昏愤，置水中救其命，再易一个，三易则毒散矣；势重者，剖蟾蜍合疮上，不久必臭不可闻。如此二三易，其肿自愈。</small>**小儿劳瘦疳疾。**
 
-**蟾酥，辛温大毒，助阳气。治疔肿发背，小儿疳疾脑疳。**即蟾蜍眉间白汁，能烂人肌肉，惟疔疳或合他药服一二厘，取其以毒攻毒。脑疳乳和滴鼻中，外科多用之。蟾蜍肪涂玉，刻之如蜡。肪音方，脂也。
+**蟾酥，辛温大毒，助阳气。治疔肿发背，小儿疳疾脑疳。**<small>即蟾蜍眉间白汁，能烂人肌肉，惟疔疳或合他药服一二厘，取其以毒攻毒。脑疳乳和滴鼻中，外科多用之。蟾蜍肪涂玉，刻之如蜡。肪音方，脂也。</small>
 
 【讲解】**蟾蜍，清热解毒，利水消胀。蟾酥功专攻毒、清肿、止痛，并能开窍醒神。**蟾蜍，为中华大蟾蜍或黑眶蟾蜍及其同属它种蟾蜍取过蟾酥后除去内脏或不去内脏的干燥全体。气腥味辛，有小毒。有消肿解毒、止痛、利水之功。蟾酥，为蟾蜍科动物中华大蟾蜍和黑眶蟾蜍的耳后腺所分泌的白色浆液、经收集加工而成的饼状干燥品。用时以碎块置酒或牛奶中溶化，然后风干或晒干研细。本品辛甘而温。有毒，为外科常用要药。不论内服或外用，都有较强的攻毒消肿和止痛作用。凡痈肿疔毒、咽喉肿痛等证，均有良效。又具有较好的开窍辟秽之功，对暑湿秽恶所致的吐泻腹痛、神志昏迷之证，有醒神回苏之效。但温散大毒，孕妇忌用。
 
