--- a/ok/bc/bc20-0.14.0.0.0.md
+++ b/ok/bc/bc20-0.14.0.0.0.md
@@ -1,6 +1,6 @@
 ## 木鳖子
 
-**〔原文〕苦温微甘，有小毒。利大肠，治泻痢疳积、瘰疬疮痔、乳痈蚌毒，消肿追毒，生肌除䵟，**音旱，黑斑。**专入外科。核扁如鳖，绿色。拣去油者。能毒狗。**
+**〔原文〕苦温微甘，有小毒。利大肠，治泻痢疳积、瘰疬疮痔、乳痈蚌毒，消肿追毒，生肌除䵟，**<small>音旱，黑斑。</small>**专入外科。核扁如鳖，绿色。拣去油者。能毒狗。**
 
 【讲解】**木鳖子功专泻热疗疮。**为葫芦科多年生蔓生草质藤本植物木鳖子的种子。种子略呈扁平圆板状，中间稍隆起，表面灰褐色，形如鳖。去壳取仁用。
 
