--- a/ok/bc/bc20-0.15.0.0.0.md
+++ b/ok/bc/bc20-0.15.0.0.0.md
@@ -1,6 +1,6 @@
 ## 血竭
 
-**〔原文〕甘咸。色赤入血分，补心包肝血不足，专除血痛，散瘀生新，为和血之圣药。治内伤血聚，金疮折跌，疮口不合，止痛生肌。性急，不可多使引脓。**血竭单入血分，乳香、没药兼人气分，皆木脂也。**出南番，色赤，以染透指甲者为真。**假者是海母血，味大咸，有腥气。**单碾用。**同众药捣，则作尘飞。
+**〔原文〕甘咸。色赤入血分，补心包肝血不足，专除血痛，散瘀生新，为和血之圣药。治内伤血聚，金疮折跌，疮口不合，止痛生肌。性急，不可多使引脓。**<small>血竭单入血分，乳香、没药兼入气分，皆木脂也。</small>**出南番，色赤，以染透指甲者为真。**<small>假者是海母血，味大咸，有腥气。</small>**单碾用。**<small>同众药捣，则作尘飞。</small>
 
 【讲解】**血竭外用止血生肌敛疮，内服活血散瘀止痛。**为棕榈科常绿藤本植物麒麟竭及同属植物的果实和树干渗出的树脂。别名麒麟竭。主产于马来西亚、印度尼西亚、伊朗等地，我国广东、台湾亦有种植。捣碎研末，生用。
 
