--- a/ok/bc/bc20-0.11.0.0.0.md
+++ b/ok/bc/bc20-0.11.0.0.0.md
@@ -1,6 +1,6 @@
 ## 皂矾
 
-**〔原文〕酸涌涩收，燥湿化痰，解毒杀虫之功，与白矾同，而力差缓。主治略同白矾，利小便，消食积，**同健脾消食药为丸。**散喉痹。**醋调咽汁。李时珍曰：胀满黄肿疟痢疳疾方往往用之，其源则自仲景用矾石硝石治女劳黄疸方中变化而来。**深青莹净者良，煅赤用。**煅赤名绛矾，能入血分，伐木，燥脾湿。张三丰治肿满，有伐木丸，苍术二斤，米泔浸，黄酒面曲四两炒，绛矾一斤，醋拌晒干，入瓶，火煅为末，醋糊丸，酒下。或云皂矾乃铜之精液，用醋制以平肝，胜于针铁，不必忌盐，后亦不发，多服令人泻。
+**〔原文〕酸涌涩收，燥湿化痰，解毒杀虫之功，与白矾同，而力差缓。主治略同白矾，利小便，消食积，**<small>同健脾消食药为丸。</small>**散喉痹。**<small>醋调咽汁。李时珍曰：胀满黄肿疟痢疳疾方往往用之，其源则自仲景用矾石硝石治女劳黄疸方中变化而来。</small>**深青莹净者良，煅赤用。**<small>煅赤名绛矾，能入血分，伐木，燥脾湿。张三丰治肿满，有伐木丸，苍术二斤，米泔浸，黄酒面曲四两炒，绛矾一斤，醋拌晒干，入瓶，火煅为末，醋糊丸，酒下。或云皂矾乃铜之精液，用醋制以平肝，胜于针铁，不必忌盐，后亦不发，多服令人泻。</small>
 
 【讲解】**皂矾功能解毒燥湿、杀虫补血。**为硫酸盐类矿物水绿矾的矿石或化学合成品。又有青矾、绿矾之称。煅后色赤，故又称“绛巩”、“红矾”。
 
