--- a/ok/bc/bc20-0.12.0.0.0.md
+++ b/ok/bc/bc20-0.12.0.0.0.md
@@ -1,6 +1,6 @@
 ## 斑蝥
 
-**〔原文〕辛寒有毒。外用蚀死肌，敷疥癣恶疮；内服破石淋，拔瘰疬疔肿，**杨登甫云：瘰疬之毒，莫不有根，大抵治以斑蝥、地胆为主，制度如法，能令其根从小便出，如粉片血块烂肉，此其验也。以木通、滑石、灯心辈导之。斑蝥捕得，屁射出，臭不可闻，故奔走下窍，直至精溺之处，能下败物。痛不可当，用须斟酌。**下猘犬毒，**九死一生之候，急用斑蝥七枚，去头翅足，糯米炒黄，为末酒服，空心下，取下小狗三四十枚，如数少再服。又方：糯米一勺，斑蝥二十一枚，分三次，炒至青烟为度，去蝥，取米为粉，冷水入清油少许，空心下，罪利下毒物，如不利再进，愈后忌闻钟鼓声，复发则不可治。服之肚痛急者，用靛汁或黄连水解之。**溃肉，**肌肉近之则烂，**堕胎。豆叶上虫，黄黑斑纹。去头足，糯米炒熟，生用则吐泻。人亦有用米取气不取质者。畏巴豆、丹参。恶甘草、豆花。**斑蝥、芫青、葛上亭长、地胆四虫，形色不同，功略相近。食芫花为芫青，青绿色尤毒，春生；食葛花为亭长，黑身赤头，夏生；食豆花为斑蝥，斑色秋生；冬入地为地胆，黑头赤尾。陶隐居云：乃一物而四时变化者。苏恭云：非也，皆极毒，须慎用。
+**〔原文〕辛寒有毒。外用蚀死肌，敷疥癣恶疮；内服破石淋，拔瘰疬疔肿，**<small>杨登甫云：瘰疬之毒，莫不有根，大抵治以斑蝥、地胆为主，制度如法，能令其根从小便出，如粉片血块烂肉，此其验也。以木通、滑石、灯心辈导之。斑蝥捕得，屁射出，臭不可闻，故奔走下窍，直至精溺之处，能下败物。痛不可当，用须斟酌。</small>**下猘犬毒，**<small>九死一生之候，急用斑蝥七枚，去头翅足，糯米炒黄，为末酒服，空心下，取下小狗三四十枚，如数少再服。又方：糯米一勺，斑蝥二十一枚，分三次，炒至青烟为度，去蝥，取米为粉，冷水入清油少许，空心下，罪利下毒物，如不利再进，愈后忌闻钟鼓声，复发则不可治。服之肚痛急者，用靛汁或黄连水解之。</small>**溃肉，**<small>肌肉近之则烂，</small>**堕胎。豆叶上虫，黄黑斑纹。去头足，糯米炒熟，生用则吐泻。人亦有用米取气不取质者。畏巴豆、丹参。恶甘草、豆花。**<small>斑蝥、芫青、葛上亭长、地胆四虫，形色不同，功略相近。食芫花为芫青，青绿色尤毒，春生；食葛花为亭长，黑身赤头，夏生；食豆花为斑蝥，斑色秋生；冬入地为地胆，黑头赤尾。陶隐居云：乃一物而四时变化者。苏恭云：非也，皆极毒，须慎用。</small>
 
 【讲解】**斑蝥外用攻毒蚀疮，内服可破血散结。**为芫青科昆虫南方大斑蝥或黄黑小斑蝥的虫体。捕捉后闷死，晒干。用时去头、足、翅，生用；或用糯米同炒至黄黑色，去米，研末用。
 
