--- a/ok/bc/bc20-0.16.0.0.0.md
+++ b/ok/bc/bc20-0.16.0.0.0.md
@@ -1,6 +1,6 @@
 ## 樟脑
 
-**〔原文〕辛热香窜，能于水中发火。**置水中，焰益炽。**通关利滞，除湿杀虫，置鞋中去脚气。**《集要》云：和乌头为末，醋丸弹子大，置足心，微火烘之，汗出为效。**熏衣箧，辟疰虫。以樟木切片，浸水煎成。升打得法，能乱冰片。**
+**〔原文〕辛热香窜，能于水中发火。**<small>置水中，焰益炽。</small>**通关利滞，除湿杀虫，置鞋中去脚气。**<small>《集要》云：和乌头为末，醋丸弹子大，置足心，微火烘之，汗出为效。</small>**熏衣箧，辟疰虫。以樟木切片，浸水煎成。升打得法，能乱冰片。**
 
 【讲解】**樟脑外用有除湿杀虫、温散止痛之功，内服具辟秽开窍之效。**为樟科常绿乔木植物樟的枝、干、根、叶，经用水蒸气蒸馏法提取挥发油，再用分馏法从挥发油中提取而得的结晶体。别名潮脑、脑子。樟树主产于我国台湾、长江以南及西南等地。
 
