--- a/ok/bc/bc20-0.17.0.0.0.md
+++ b/ok/bc/bc20-0.17.0.0.0.md
@@ -1,6 +1,6 @@
 ## 大风子
 
-**〔原文〕辛热有毒。取油治疮癣疥癞，有杀虫劫毒之力。**朱丹溪曰：粗工治大风病，佐以大风油，殊不知此物性热，有燥痰之功而伤血，至有病将愈而先失明者。**出南番。子中有仁，白色，久则油黄，不可用。入丸药，压去油。**
+**〔原文〕辛热有毒。取油治疮癣疥癞，有杀虫劫毒之力。**<small>朱丹溪曰：粗工治大风病，佐以大风油，殊不知此物性热，有燥痰之功而伤血，至有病将愈而先失明者。</small>**出南番。子中有仁，白色，久则油黄，不可用。入丸药，压去油。**
 
 【讲解】**大风子功能祛风燥湿、攻毒杀虫。**为大风子科常绿乔木泰国大枫子树的成熟种子。研末或炒炭用；取油用，即大风子油。我国产于台湾；印度、泰国、越南及印尼等国出产较多。
 
