--- a/ok/bc/bc20-0.18.0.0.0.md
+++ b/ok/bc/bc20-0.18.0.0.0.md
@@ -1,6 +1,6 @@
 ## 蛇床子
 
-**〔原文〕辛苦而温。强阳益阴，补肾祛寒，祛风燥湿。治阴痿囊湿、女子阴痛阴痒、**湿生虫，同矾煎汤洗。**子脏虚寒、产门不闭、**炒热熨之。**肾命之病，及腰痠体痛、带下脱肛、喉痹齿痛、湿癣恶疮、**杀虫止痒。**风湿诸病。煎汤浴，止风痒。**李时珍曰：肾命三焦气分之药，不独补助男子，而且有益妇人。世人舍此而求补药于远域，岂非贵耳贱目乎？**似小茴而细，微炒，杀毒则不辣。**以地黄汁拌蒸三遍佳。**恶丹皮、贝母、巴豆。**
+**〔原文〕辛苦而温。强阳益阴，补肾祛寒，祛风燥湿。治阴痿囊湿、女子阴痛阴痒、**<small>湿生虫，同矾煎汤洗。</small>**子脏虚寒、产门不闭、**<small>炒热熨之。</small>**肾命之病，及腰痠体痛、带下脱肛、喉痹齿痛、湿癣恶疮、**<small>杀虫止痒。</small>**风湿诸病。煎汤浴，止风痒。**<small>李时珍曰：肾命三焦气分之药，不独补助男子，而且有益妇人。世人舍此而求补药于远域，岂非贵耳贱目乎？</small>**似小茴而细，微炒，杀毒则不辣。**<small>以地黄汁拌蒸三遍佳。</small>**恶丹皮、贝母、巴豆。**
 
 【讲解】**蛇床子内服温肾助阳，外用燥湿杀虫。**为伞形科一年生草本植物蛇床的果实。呈椭圆形，似小茴香，而有特殊气味。晒干，生用。
 
