--- a/ok/bc/bc20-0.19.0.0.0.md
+++ b/ok/bc/bc20-0.19.0.0.0.md
@@ -1,6 +1,6 @@
 ## 木槿皮
 
-**〔原文〕苦凉。活血润燥，治肠风泻血，痢后热渴。作饮服，令人得睡。川产者治癣疮。**癣疮有虫，用川槿皮肥皂水浸，时时搽之，或浸汁磨雄黄尤妙。**用根皮。**
+**〔原文〕苦凉。活血润燥，治肠风泻血，痢后热渴。作饮服，令人得睡。川产者治癣疮。**<small>癣疮有虫，用川槿皮肥皂水浸，时时搽之，或浸汁磨雄黄尤妙。</small>**用根皮。**
 
 【讲解】**木槿皮功善清热杀虫止痒。**为锦葵科落叶灌木植物木槿的根皮或茎皮。四川产者称川槿皮。切片晒干生用。
 
