--- a/ok/bc/bc20-0.2.0.0.0.md
+++ b/ok/bc/bc20-0.2.0.0.0.md
@@ -1,6 +1,6 @@
 ## 石硫黄
 
-**〔原文〕味酸有毒，大热纯阳，**硫黄阳精极热，与大黄极寒，并号将军。**补命门真火不足。性虽热而疏利大肠，与燥涩者不同。**热药多祈秘，惟硫黄暖而能通；寒药多泄，惟黄连肥肠而止泻。**若阳气暴绝，阴毒伤寒，久患寒泻，脾胃虚寒，性命欲垂尽者用之，亦救危急妙药也。治寒痹冷癖，足寒无力，老人虚秘，**《局方》用半硫丸。**妇人阴蚀，小儿慢惊。暖精壮阳，杀虫疗疮，辟鬼魅，化五金，又能干汞。**王好古云：太白丹、来复丹，皆用硫黄，佐以硝石，至阳佐以至阴，与仲景白通汤佐以人尿、猪胆汁意同。所以治内伤生冷、外冒暑湿，霍乱诸病，能除扦格之寒。兼有伏阳，不得不尔，如无伏阳，只是阴虚，更不必以阴药佐之。《夷坚志》云：唐与正亦知医，能以意治病，吴巡检病不得溲，卧则微通，立则不能涓滴，遍用通药不效，唐问其平日自制黑锡丹常服，因悟曰：此必结砂时，硫飞去，铅不死，铅砂入膀胱，卧则偏重犹可溲，立则正塞水道，故不通。取金液丹三百粒，分十服，瞿麦汤下，铅得硫则化，水道遂通。家母舅童时亦病溺涩，服通淋药罔效，老医黄五聚视之曰：此乃外皮窍小，故溺时艰难，非淋证也。以牛骨作楔，塞于皮端，窍渐展开，勿药而愈。使重服通利药，得不更变他证乎？乃知医理非一端也。硫能化铅为水，修炼家尊之为金液丹。**番舶者良。**难得。**取色黄坚如石者，以莱菔剜空，入硫合定，糠火煨熟，去其臭气；以紫背浮萍煮过，消其火毒；以皂荚汤淘其黑浆。一法绢袋盛，煮酒三日夜；一法入猪大肠烂煮三时用。畏细辛、诸血、醋。**
+**〔原文〕味酸有毒，大热纯阳，**<small>硫黄阳精极热，与大黄极寒，并号将军。</small>**补命门真火不足。性虽热而疏利大肠，与燥涩者不同。**<small>热药多祈秘，惟硫黄暖而能通；寒药多泄，惟黄连肥肠而止泻。</small>**若阳气暴绝，阴毒伤寒，久患寒泻，脾胃虚寒，性命欲垂尽者用之，亦救危急妙药也。治寒痹冷癖，足寒无力，老人虚秘，**<small>《局方》用半硫丸。</small>**妇人阴蚀，小儿慢惊。暖精壮阳，杀虫疗疮，辟鬼魅，化五金，又能干汞。**<small>王好古云：太白丹、来复丹，皆用硫黄，佐以硝石，至阳佐以至阴，与仲景白通汤佐以人尿、猪胆汁意同。所以治内伤生冷、外冒暑湿，霍乱诸病，能除扦格之寒。兼有伏阳，不得不尔，如无伏阳，只是阴虚，更不必以阴药佐之。《夷坚志》云：唐与正亦知医，能以意治病，吴巡检病不得溲，卧则微通，立则不能涓滴，遍用通药不效，唐问其平日自制黑锡丹常服，因悟曰：此必结砂时，硫飞去，铅不死，铅砂入膀胱，卧则偏重犹可溲，立则正塞水道，故不通。取金液丹三百粒，分十服，瞿麦汤下，铅得硫则化，水道遂通。家母舅童时亦病溺涩，服通淋药罔效，老医黄五聚视之曰：此乃外皮窍小，故溺时艰难，非淋证也。以牛骨作楔，塞于皮端，窍渐展开，勿药而愈。使重服通利药，得不更变他证乎？乃知医理非一端也。硫能化铅为水，修炼家尊之为金液丹。</small>**番舶者良。**<small>难得。</small>**取色黄坚如石者，以莱菔剜空，入硫合定，糠火煨熟，去其臭气；以紫背浮萍煮过，消其火毒；以皂荚汤淘其黑浆。一法绢袋盛，煮酒三日夜；一法入猪大肠烂煮三时用。畏细辛、诸血、醋。**
 
 **土硫黄，辛热腥臭，止可入疮药，不可服饵。**
 
