--- a/ok/bc/bc20-0.20.0.0.0.md
+++ b/ok/bc/bc20-0.20.0.0.0.md
@@ -1,6 +1,6 @@
 ## 丝瓜
 
-**〔原文〕甘平。**苏颂曰冷。**凉血解毒、除风化痰、通经络、行血脉、**老者筋络贯穿，象人经络，故可借其气以引之。**消浮肿、稀痘疮。**出不快者，烧存性入朱砂蜜水调服。**治肠风崩漏、疝痔痈疽，滑肠下乳。**
+**〔原文〕甘平。**<small>苏颂曰冷。</small>**凉血解毒、除风化痰、通经络、行血脉、**<small>老者筋络贯穿，象人经络，故可借其气以引之。</small>**消浮肿、稀痘疮。**<small>出不快者，烧存性入朱砂蜜水调服。</small>**治肠风崩漏、疝痔痈疽，滑肠下乳。**
 
 【讲解】**丝瓜不常作药用，药用以丝瓜络为主。丝瓜络善去风通络、解毒化痰。**丝瓜络为葫芦科一年生攀缘草本檀物丝瓜的果络。秋季摘取成熟果实，搓去外皮及果肉，剪去两端，去掉种子，切段生用。
 
