--- a/ok/bc/bc20-0.22.0.0.0.md
+++ b/ok/bc/bc20-0.22.0.0.0.md
@@ -1,6 +1,6 @@
 ## 阿魏
 
-**〔原文〕辛平。**一曰温。**入脾胃。消肉积，杀细虫，去臭气。**谚云：黄芩无假，阿魏无真。刘纯云：阿魏无真却有真，臭而止臭是为珍。**解蕈菜、自死牛马肉毒，治心腹冷痛疟痢，**疟痢多由积滞而起。**传尸疳劳疰虫。出西番，木脂熬成，极臭。试取少许，安铜器一宿，沾处白如银汞者真。**人多以胡蒜白赝之。**用钵研细，热酒器上熏过入药。**
+**〔原文〕辛平。**<small>一曰温。</small>**入脾胃。消肉积，杀细虫，去臭气。**<small>谚云：黄芩无假，阿魏无真。刘纯云：阿魏无真却有真，臭而止臭是为珍。</small>**解蕈菜、自死牛马肉毒，治心腹冷痛疟痢，**<small>疟痢多由积滞而起。</small>**传尸疳劳疰虫。出西番，木脂熬成，极臭。试取少许，安铜器一宿，沾处白如银汞者真。**<small>人多以胡蒜白赝之。</small>**用钵研细，热酒器上熏过入药。**
 
 【讲解】**阿魏以消积杀虫为主要功效。**为伞形科多年生草本植物阿魏及其同属植物的新鲜根茎及根切伤后渗出的油胶树脂。分布于苏联中亚细亚地区及伊朗、阿富汗等国，我国新疆亦产。
 
