--- a/ok/bc/bc20-0.4.0.0.0.md
+++ b/ok/bc/bc20-0.4.0.0.0.md
@@ -1,6 +1,6 @@
 ## 水银
 
-**〔原文〕辛寒，阴毒。功专杀虫，治疮疥虮虱，**性滑重，直入肉，头疮切不可用，恐入经络，令人筋骨拘挛。**解金银铜锡毒，**能杀五金。**堕胎绝孕。从丹砂烧煅而出。畏磁石、砒霜。得铅则凝，得硫则结。并枣肉入唾研则碎，散失在地者，以花椒、茶末收。**
+**〔原文〕辛寒，阴毒。功专杀虫，治疮疥虮虱，**<small>性滑重，直入肉，头疮切不可用，恐入经络，令人筋骨拘挛。</small>**解金银铜锡毒，**<small>能杀五金。</small>**堕胎绝孕。从丹砂烧煅而出。畏磁石、砒霜。得铅则凝，得硫则结。并枣肉入唾研则碎，散失在地者，以花椒、茶末收。**
 
 【讲解】**水银是以毒攻毒的解毒杀虫药。**系由汞矿中取得后提炼而成的纯汞。也有从辰砂矿提得的。均为有银色光泽，极易流动之质重的液体。
 
