--- a/ok/bc/bc20-0.5.0.0.0.md
+++ b/ok/bc/bc20-0.5.0.0.0.md
@@ -1,6 +1,6 @@
 ## 轻粉
 
-**〔原文〕辛冷。**李时珍曰：燥有毒。**杀虫治疮，劫痰消积。**能消涎积。十枣汤加大黄、牵牛、轻粉，名三化神佑散。**善入经络，瘛疭药多用之。不可过服常用。**李时珍曰：水银阴毒，用火煅丹砂而出，再加盐矾炼为轻粉，轻扬燥烈，走而不守，今人用治杨梅毒疮。虽能劫风痰湿热，从牙龈出，邪郁暂解，然毒气窜入经络，筋骨血液耗亡，筋失所养，变为筋挛骨痛，痈疽疳漏，遂成废痼，贻害无穷。上下齿龈，属手足阳明肠胃经，毒气循经上行，至齿龈薄嫩之处而出。**土茯苓、黄连、黑铅、铁浆、陈酱，能制其毒。**
+**〔原文〕辛冷。**<small>李时珍曰：燥有毒。</small>**杀虫治疮，劫痰消积。**<small>能消涎积。十枣汤加大黄、牵牛、轻粉，名三化神佑散。</small>**善入经络，瘛疭药多用之。不可过服常用。**<small>李时珍曰：水银阴毒，用火煅丹砂而出，再加盐矾炼为轻粉，轻扬燥烈，走而不守，今人用治杨梅毒疮。虽能劫风痰湿热，从牙龈出，邪郁暂解，然毒气窜入经络，筋骨血液耗亡，筋失所养，变为筋挛骨痛，痈疽疳漏，遂成废痼，贻害无穷。上下齿龈，属手足阳明肠胃经，毒气循经上行，至齿龈薄嫩之处而出。</small>**土茯苓、黄连、黑铅、铁浆、陈酱，能制其毒。**
 
 【讲解】**轻粉外用可攻毒杀虫，内服可逐水通便。**为水银、明矾、食盐等用升华法制成的汞化合物。呈片状、针状或结晶状的粉末，体轻质疏松，色白有光泽。别名：汞粉、水银粉、腻粉。避光保存，研细用。
 
