--- a/ok/bc/bc20-0.21.0.0.0.md
+++ b/ok/bc/bc20-0.21.0.0.0.md
@@ -1,6 +1,6 @@
 ## 孩儿茶
 
-**〔原文〕苦涩。清上膈热、化痰生津、止血收湿、定痛生肌、涂金疮口疮、**硼砂等分。**阴疳痔肿。出南番，云是细茶末，纳竹筒、埋土中，曰久取出，捣汁熬成块。小润泽者上，大而枯者次之。**
+**〔原文〕苦涩。清上膈热、化痰生津、止血收湿、定痛生肌、涂金疮口疮、**<small>硼砂等分。</small>**阴疳痔肿。出南番，云是细茶末，纳竹筒、埋土中，曰久取出，捣汁熬成块。小润泽者上，大而枯者次之。**
 
 【讲解】**孩儿茶功能收湿敛疮、生肌止血。**为豆科落叶乔木植物儿茶的枝干及心材煎汁浓缩而成。商品呈方形或不规则形状，有时可见龟裂纹，表面黄褐色或黑色，质脆易碎。断面有光泽，中心呈棕黑色。用时研细。主产于印度、缅甸、老挝等地，我国云南也有生产。
 
