--- a/ok/bc/bc20-0.3.0.0.0.md
+++ b/ok/bc/bc20-0.3.0.0.0.md
@@ -1,6 +1,6 @@
 ## 砒石
 
-**〔原文〕辛苦而咸，大热大毒，砒霜尤烈。专能燥痰，可作吐药，疗风痰在胸膈，截疟除哮。外用蚀败肉，杀虫枯痔。出信州，故名信石，衡州次之，锡之苗也。**故锡壶亦云有毒。**生者名砒黄，炼者名砒霜。畏绿豆、冷水、羊血。**
+**〔原文〕辛苦而咸，大热大毒，砒霜尤烈。专能燥痰，可作吐药，疗风痰在胸膈，截疟除哮。外用蚀败肉，杀虫枯痔。出信州，故名信石，衡州次之，锡之苗也。**<small>故锡壶亦云有毒。</small>**生者名砒黄，炼者名砒霜。畏绿豆、冷水、羊血。**
 
 【讲解】**砒石外用能蚀疮去腐，内服劫痰平喘。**为砷矿中的砷华矿石的加工品。除极少部分来自天然砷矿的氧化物外，大多由砷矿石烧炼升华或使雄黄氧化升华而成。未经煅炼前称生砒，炼后称砒霜。商品有红砒、白砒两种。白砒为较纯的氧化砷；红砒尚含有少量硫化砷。用时研细。或与绿豆同煮减其毒性，研末用。原产信州（今江西上饶），故又称信石，后隐“信”为“人言”，所以也称人言。
 
