--- a/ok/bc/bc20-0.7.0.0.0.md
+++ b/ok/bc/bc20-0.7.0.0.0.md
@@ -1,6 +1,6 @@
 ## 密陀僧
 
-**〔原文〕辛咸小毒，感银铅之气而结。坠痰镇惊，止血散肿，消积杀虫。疗肿毒，愈冻疮，**用桐油调敷。解狐臭，油调搽腋，以馒头蒸热劈开，掺末夹腋下亦佳。**染髭鬚。出银坑难得，今用者乃倾银炉底，入药煮一伏时。**
+**〔原文〕辛咸小毒，感银铅之气而结。坠痰镇惊，止血散肿，消积杀虫。疗肿毒，愈冻疮，**<small>用桐油调敷。</small>**解狐臭，**<small>油调搽腋，以馒头蒸热劈开，掺末夹腋下亦佳。</small>**染髭鬚。出银坑难得，今用者乃倾银炉底，入药煮一伏时。**
 
 【讲解】**密陀僧外用敛疮止痒、解毒防腐。**为粗制的氧化铅。以往取自提炼银、铅时沉积于炉底的黄色或红黄色粉末或鳞片，镶嵌着具有金属光泽的小块，光照则闪闪发光。水飞研末用。
 
