--- a/ok/bc/bc20-0.8.0.0.0.md
+++ b/ok/bc/bc20-0.8.0.0.0.md
@@ -1,6 +1,6 @@
 ## 硼砂
 
-**〔原文〕甘微咸凉，色白质轻，故除上焦胸膈之痰热，生津止嗽，治喉痹口齿诸病。**初觉喉中肿痛，含化咽津，则不成痹。**能柔五金而去垢腻，故治噎膈积块，结核胬肉，目翳骨鲠。**咸能软坚，含之咽汁。**出西番者，白如明矾；出南番者，黄如桃胶。能制汞哑铜。**硼砂、硇砂，并可作金银焊。
+**〔原文〕甘微咸凉，色白质轻，故除上焦胸膈之痰热，生津止嗽，治喉痹口齿诸病。**<small>初觉喉中肿痛，含化咽津，则不成痹。</small>**能柔五金而去垢腻，故治噎膈积块，结核胬肉，目翳骨鲠。**<small>咸能软坚，含之咽汁。</small>**出西番者，白如明矾；出南番者，黄如桃胶。能制汞哑铜。**<small>硼砂、硇砂，并可作金银焊。</small>
 
 【讲解】**硼砂外用清热解毒，内服清肺化痰。**为单斜晶系由矿石硼砂提炼出的结晶体，又名月石。呈白色透明或半透明块状或粉末状，入药生用，或煅用。
 
