--- a/ok/bc/bc20-0.9.0.0.0.md
+++ b/ok/bc/bc20-0.9.0.0.0.md
@@ -1,6 +1,6 @@
 ## 炉甘石
 
-**〔原文〕甘温，阳明胃经药，受金银之气。金胜木，燥胜湿，故止血消肿，收湿除烂，退赤去翳，为目疾要药。产金银坑中，金银之苗也。状如羊脑，松似石脂，能点赤铜为黄。**今之黄铜，皆其所点也。**煅红，童便淬七次，研粉，水飞用。**
+**〔原文〕甘温，阳明胃经药，受金银之气。金胜木，燥胜湿，故止血消肿，收湿除烂，退赤去翳，为目疾要药。产金银坑中，金银之苗也。状如羊脑，松似石脂，能点赤铜为黄。**<small>今之黄铜，皆其所点也。</small>**煅红，童便淬七次，研粉，水飞用。**
 
 【讲解】**炉甘石有明目退翳、收湿生肌之功。**为天然菱锌矿石。表面白色不透明，体轻，粉质性脆。采挖后除去泥土杂石，制用，称制炉甘石，有火煅，醋淬，及火煅后用三黄汤〈黄连、黄柏、大黄）淬等制法，晒干研末，水飞后用。
 
