--- a/ok/bc/bc20-0.23.0.0.0.md
+++ b/ok/bc/bc20-0.23.0.0.0.md
@@ -1,6 +1,6 @@
 ## 露蜂房
 
-**〔原文〕甘平有毒。治惊痫瘛疭，附骨痈疽，根在脏腑。**和蛇蜕、乱发烧灰酒服。按附骨疽不破。附骨成脓，故名。不知者误作贼风治。附骨疽痛处发热，四体乍热乍寒，小便赤，大便秘而无汗。泻热发散则消，贼风痛处不热，亦不发寒热，觉身冷，欲得热熨，则小宽，时有汗，宜风药治之。**涂瘰疬成痿，**音漏，炙研，猪脂和涂。**止风虫牙痛，**煎水含漱，时珍曰：阳明药也，取其以毒攻毒，兼杀虫之功耳。**敷小儿重舌，**烧灰酒和敷舌下，日数次。起阴痿，烧灰敷阴上，**取悬于树受风露者，炙用。**治痈肿醋调涂，洗疮煎用。
+**〔原文〕甘平有毒。治惊痫瘛疭，附骨痈疽，根在脏腑。**<small>和蛇蜕、乱发烧灰酒服。按附骨疽不破。附骨成脓，故名。不知者误作贼风治。附骨疽痛处发热，四体乍热乍寒，小便赤，大便秘而无汗。泻热发散则消，贼风痛处不热，亦不发寒热，觉身冷，欲得热熨，则小宽，时有汗，宜风药治之。</small>**涂瘰疬成痿，**<small>音漏，炙研，猪脂和涂。</small>**止风虫牙痛，**<small>煎水含漱，时珍曰：阳明药也，取其以毒攻毒，兼杀虫之功耳。</small>**敷小儿重舌，**<small>烧灰酒和敷舌下，日数次。</small>**起阴痿，**<small>烧灰敷阴上，</small>**取悬于树受风露者，炙用。**<small>治痈肿醋调涂，洗疮煎用。</small>
 
 【讲解】**露蜂房长于攻毒疗疮，兼能祛风止痛。**为胡蜂科昆虫大黄蜂的蜂巢，或连蜂蛹在内的巢。原药酒洗生用或焙黄矸末用。
 
