--- a/ok/bc/bc07-0.1.0.0.0.md
+++ b/ok/bc/bc07-0.1.0.0.0.md
@@ -10,7 +10,7 @@
 
 **乌附尖吐风痰，治癫痫，取其锋锐，直达病所**。丹溪治许白云，屡用瓜蒂，栀子、苦参、藜芦等剂，吐之不透，后用附子尖和浆水与之，始得大吐胶痰数碗。
 
-**天雄补下焦命门阳虚，**寇宗爽、张元素皆曰补上焦。丹溪曰：可为下部之佐。时珍曰：其尖皆向下生，故下行。然补下乃所以益上也。若上焦阳虚，则属心肺之分，当用参、芪，不当用雄、附矣。**治风寒湿痹，为风家主药，发汗又能止阴汗。**
+**天雄补下焦命门阳虚，**寇宗奭、张元素皆曰补上焦。丹溪曰：可为下部之佐。时珍曰：其尖皆向下生，故下行。然补下乃所以益上也。若上焦阳虚，则属心肺之分，当用参、芪，不当用雄、附矣。**治风寒湿痹，为风家主药，发汗又能止阴汗。**
 
 侧子散侧旁生，宜于发散四肢，充达皮毛，治手足风湿诸痹。
 
