--- a/ok/bc/bc06-0.0.14.0.0.md
+++ b/ok/bc/bc06-0.0.14.0.0.md
@@ -1,6 +1,6 @@
 ### **原蚕沙**
 
-[原文] **蚕食而不饮，属火性燥，燥能去风胜湿，**经曰：燥胜风，燥属金，风属木也。**其沙辛甘而温。炒黄浸酒，治风湿为病，肢节不随，皮肤顽痹，腰脚冷痛，冷血瘀血。**史国公药酒中用之。**炒热熨患处亦良。**寇宗爽曰：醇酒三升，拌蚕沙五升，蒸热铺暖室席上，令患冷风气痹人以患处就卧，厚复取汁。不愈，间日再作，须防昏闷。**麻油调敷， 治烂弦风眼。**目上下胞属脾，脾有风湿，则虫生弦烂。又新瓦炙为末，少加雄黄，麻油调敷，治蛇串疮。有人食乌梢蛇，浑身变黑，渐生鳞甲，见者惊缩，郑奠一令日服晚蚕沙五钱，尽一二斗，久之乃退。**晚蚕矢也，淘净晒干。**
+[原文] **蚕食而不饮，属火性燥，燥能去风胜湿，**经曰：燥胜风，燥属金，风属木也。**其沙辛甘而温。炒黄浸酒，治风湿为病，肢节不随，皮肤顽痹，腰脚冷痛，冷血瘀血。**史国公药酒中用之。**炒热熨患处亦良。**寇宗奭曰：醇酒三升，拌蚕沙五升，蒸热铺暖室席上，令患冷风气痹人以患处就卧，厚复取汁。不愈，间日再作，须防昏闷。**麻油调敷， 治烂弦风眼。**目上下胞属脾，脾有风湿，则虫生弦烂。又新瓦炙为末，少加雄黄，麻油调敷，治蛇串疮。有人食乌梢蛇，浑身变黑，渐生鳞甲，见者惊缩，郑奠一令日服晚蚕沙五钱，尽一二斗，久之乃退。**晚蚕矢也，淘净晒干。**
 
 【讲解】**蚕沙以祛风除湿为主要功效。**为蚕蛾科昆虫家蚕蛾幼虫的干燥粪便。六到八月收集， 以二眠到三眠时的粪便为主。收集后晒干，簸净泥土，除去轻粒及桑叶碎屑。原药生用。
 
