--- a/ok/fk/fk0zl03-0.2.0.0.0.md
+++ b/ok/fk/fk0zl03-0.2.0.0.0.md
@@ -80,4 +80,4 @@
 
 冲任间接损伤则由气血不和，脏腑功能失常所致。因经脉需脏腑、气血的滋养，如肝气不舒，肝肾亏损，精血不足，脾气虚弱，湿浊壅聚均可引起气血失调，冲任失养；若气血失调，亦可影响脏腑功能失常，同样可损伤冲任，而导致妇科疾病的发生。
 
-综上所述，气血失调，脏腑功能失常，冲任损伤，三者虽各有不同的发病原理和特点，但从局部和整体的病机变化中，三者是相互关联，相互影响，相互转化的病理变化，是错综复杂而多变的，故寇宗爽说：“宁治十男子，莫治一妇人”。但病变不论多么复杂，疾变不论起于何脏，何腑，是在气、在血，还是在经、在络，其病机反应总是整体的，都是损伤了冲任（督带）的生理功能而发病。这才能从错综复杂的变化中，找出经、带、胎、产、杂病病机之关键所在，从而做出正确的诊断，施以合理的治疗。
+综上所述，气血失调，脏腑功能失常，冲任损伤，三者虽各有不同的发病原理和特点，但从局部和整体的病机变化中，三者是相互关联，相互影响，相互转化的病理变化，是错综复杂而多变的，故寇宗奭说：“宁治十男子，莫治一妇人”。但病变不论多么复杂，疾变不论起于何脏，何腑，是在气、在血，还是在经、在络，其病机反应总是整体的，都是损伤了冲任（督带）的生理功能而发病。这才能从错综复杂的变化中，找出经、带、胎、产、杂病病机之关键所在，从而做出正确的诊断，施以合理的治疗。
