--- a/ok/rm/rm000.md
+++ b/ok/rm/rm000.md
@@ -10,4 +10,4 @@
 
 现为光明中医网校副校长，主持了光明中医教材1000万字的电子化工作。
 
-为解决中医学习入门较难道问题，在光明中医85级校友、山东烟台名医于云老师指导下，依据教材撰写了《中医概念入门》一书，以通俗易懂的方式解释了中医基础理论。 
+为解决中医学习入门较难的问题，在光明中医85级校友、山东烟台名医于云老师指导下，依据教材撰写了《中医概念入门》一书，以通俗易懂的方式解释了中医基础理论。 
