--- a/ok/rm/rm07.md
+++ b/ok/rm/rm07.md
@@ -70,7 +70,7 @@
 
 ##### 3.1、面色
 
-面色包括面部的颜色和光泽。一般来说面色光泽明润，为身体气血充足的表现，即使得病，问题也不大。
+面色包括面部的颜色和光泽。一般来说面色光泽明亮，为身体气血充足的表现，即使得病，问题也不大。
 
 > 张三钖说：“五脏六腑之精华，上彰于明堂，...但当求其有神，虽困无害，神者色中光泽明亮是也，脉有胃气，同一理也。”
 
