--- a/ok/fjx/fjx04-0.14.0.0.0.md
+++ b/ok/fjx/fjx04-0.14.0.0.0.md
@@ -6,7 +6,7 @@
 
 〔讲解〕本方主治肺痨，阴虚久热不退发生骨蒸者。骨蒸是热在骨间薰蒸，病人自觉热在骨间，热从骨中发至肌肤外面，热度不高，为虚劳病重症。方用鳖甲滋阴潜阳为君，以清骨间热。臣以当归养血和血助鳖甲以补不足之阴血，软坚解郁，佐以地骨皮、知母、秦艽清虚热、退骨蒸，泻有余之阳热，再用少量乌梅以敛汗保阴。使以柴胡、青蒿透达邪热，使热从外解。柴胡为足少阳表药，治气分热，青蒿为少阳、厥阴血药，治血热能透阴分伏热外出，两药合用,气血并调。全方用药本着滋不足，泻有余，双管齐下，共呈滋阴补血，内清外透之功，然总以滋阴为主，清热为辅。
 
-〔临证应用〕本方主治阴虚肝旺、虚火上炎齐肺痨，除见骨蒸潮热，肌肉消瘦外，应以唇红颊赤，口干咽燥，咳呛痰少，或痰黄粘稠，困倦盗汗，胁肋胀痛，易躁易怒，男子梦遗，舌红少苔，脉细数等肝旺火升症为应用要点。
+〔临证应用〕本方主治阴虚肝旺、虚火上炎之肺痨，除见骨蒸潮热，肌肉消瘦外，应以唇红颊赤，口干咽燥，咳呛痰少，或痰黄粘稠，困倦盗汗，胁肋胀痛，易躁易怒，男子梦遗，舌红少苔，脉细数等肝旺火升症为应用要点。
 
 如血虚甚者可加生地、白芍、咳重加沙参、麦冬、百部。热重加酒参。
 
