--- a/ok/bc/bc03-0.5.3.0.0.md
+++ b/ok/bc/bc03-0.5.3.0.0.md
@@ -1,6 +1,6 @@
 ### 地骨皮
 
-**〔原文〕甘淡而寒。降肺中伏火，泻肝肾虚热，能凉血而补正气。故内治五内邪热**（1） ,热淫于内，治以甘寒。地骨一斤，生地五斤，酒煮服，治带下。**吐血尿血**，捣鲜汗服。**咳嗽消渴**，清肺。**外治肌热虚汗，上除头风痛**，能除风者，肝肾同治也。肝有热，则风自生，与外感之风不同，**热退则自息**。中平胸胁痛，清肝。**下利大小肠**。**疗在表无定之风邪，传尸有汗之骨蒸**。李东垣曰：地为阴，骨为里，皮为表。地骨皮泻肾火，牡丹皮泻包络火，总治热在外，无汗而骨蒸；知母泻肾火，治热在内有汗而骨蒸。四物汤加二皮，治妇人骨蒸。朱二允曰：能退内潮，人所知也；能退外潮，人实不知。病或风寒散而未尽，作潮往来。非柴葛所能治用地骨皮走表又走里之药，消其浮游之邪，服之未有不愈者，特表明之。时珍曰：枸杞、地骨，甘寒平补，使精气充足，则邪火自退。世人多用苦寒，以苓连降上焦，知柏降下焦，致伤元气，惜哉！予尝青蒿佐地骨退热，累有殊功。**甘草水浸一宿用**。肠滑者忌枸杞子，中寒者忌地骨皮。掘鲜者同鲜小蓟煎浓汁，浸下疳甚效。
+**〔原文〕甘淡而寒。降肺中伏火，泻肝肾虚热，能凉血而补正气。故内治五内邪热**（1） ,<small>热淫于内，治以甘寒。地骨一斤，生地五斤，酒煮服，治带下。</small>**吐血尿血**，<small>捣鲜汁服。</small>**咳嗽消渴**，清肺。**外治肌热虚汗，上除头风痛**，<small>能除风者，肝肾同治也。肝有热，则风自生，与外感之风不同，热退则自息。</small>**中平胸胁痛**，<small>清肝。</small>**下利大小肠**。**疗在表无定之风邪，传尸有汗之骨蒸**。<small>李东垣曰：地为阴，骨为里，皮为表。地骨皮泻肾火，牡丹皮泻包络火，总治热在外，无汗而骨蒸；知母泻肾火，治热在内有汗而骨蒸。四物汤加二皮，治妇人骨蒸。朱二允曰：能退内潮，人所知也；能退外潮，人实不知。病或风寒散而未尽，作潮往来。非柴葛所能治用地骨皮走表又走里之药，消其浮游之邪，服之未有不愈者，特表明之。时珍曰：枸杞、地骨，甘寒平补，使精气充足，则邪火自退。世人多用苦寒，以苓连降上焦，知柏降下焦，致伤元气，惜哉！予尝青蒿佐地骨退热，累有殊功。</small>**甘草水浸一宿用**。<small>肠滑者忌枸杞子，中寒者忌地骨皮。掘鲜者同鲜小蓟煎浓汁，浸下疳甚效。</small>
 
 【讲解】 （1）五内邪热：指五脏内之热邪。	
 
