--- a/ok/bc/bc03-0.5.4.0.0.md
+++ b/ok/bc/bc03-0.5.4.0.0.md
@@ -1,9 +1,8 @@
 ### 胡黄连
 
-**〔原文〕苦寒。去心热，益肝胆，厚肠胃。治骨蒸劳热，五心**心窝，左右手心、足心。**烦热，三消**(1)渴而
-多饮为上消，肺热也，心移热于肺，传为膈消是也；多食善饥为中消，胃热也，瘅成为消中是也；渴而小便数有膏为下消，肾热而水亏也。**五痔**，牝痔、牡痔、脉痔、肠痔、血痔，泻热下流伤血分，无所施泄，则逼肛门而为痔肿。**温疟泻痢，女人胎蒸**(2)。**消果子积，为小儿惊疳良药**。朱二允曰：解吃烟毒，合茶服之甚效。**性味功用同黄连，故名。出波斯国，今秦陇南海亦有之，心黑外黄，折之尘出如烟者真。畏恶同黄连**。
+**〔原文〕苦寒。去心热，益肝胆，厚肠胃。治骨蒸劳热，五心**<small>心窝，左右手心、足心。</small>**烦热，三消**(1)<small>渴而多饮为上消，肺热也，心移热于肺，传为膈消是也；多食善饥为中消，胃热也，瘅成为消中是也；渴而小便数有膏为下消，肾热而水亏也。</small>**五痔**，<small>牝痔、牡痔、脉痔、肠痔、血痔，泻热下流伤血分，无所施泄，则逼肛门而为痔肿。</small>**温疟泻痢，女人胎蒸**(2)。**消果子积，为小儿惊疳良药**。<small>朱二允曰：解吃烟毒，合茶服之甚效。</small>**性味功用同黄连，故名。出波斯国，今秦陇南海亦有之，心黑外黄，折之尘出如烟者真。畏恶同黄连**。
 
-【讲解】	(1)三消：根据消渴的多饮、多食、多尿三个王证，区分为上、中、下三消。(2)胎蒸：指孕妇发生劳热骨蒸之证。
+【讲解】	(1)三消：根据消渴的多饮、多食、多尿三个主证，区分为上、中、下三消。(2)胎蒸：指孕妇发生劳热骨蒸之证。
 
 **胡黄连能退虚热，除疳热，清湿热**。为玄参科多年生草本植物胡黄连的根茎。干燥根茎呈圆柱形，表面灰黄色；质硬而脆，易折断，折断时有粉尘飞；断面皮部灰黑色、木部黄白色。以条粗，折断时有粉尘，断面灰黑。味苦者为佳。古人认为功似黄连，来自西域，故名胡黄连。主产印度，进口为主，西藏亦有少量生产。切片，生用。
 
