--- a/ok/bc/bc04-0.0.1.0.0.md
+++ b/ok/bc/bc04-0.0.1.0.0.md
@@ -1,6 +1,6 @@
 ### 藿香
 
-〔原文〕 **辛甘微温。入手足太阴**。肺、脾。**快气和中，开胃止呕**，胃弱、胃热而呕者忌用。**去恶气，进饮食。治霍乱吐泻，心腹绞痛，肺虚有寒，上焦壅热**。能理脾肺之气。古方有藿香正气散，正气通畅，则邪逆自除。**出交广，方茎有节，叶微似茄叶。古惟用叶，今枝茎亦用之，因叶多伪也**。
+〔原文〕 **辛甘微温。入手足太阴**。<small>肺、脾。</small>**快气和中，开胃止呕**，<small>胃弱、胃热而呕者忌用。</small>**去恶气，进饮食。治霍乱吐泻，心腹绞痛，肺虚有寒，上焦壅热**。<small>能理脾肺之气。古方有藿香正气散，正气通畅，则邪逆自除。</small>**出交广，方茎有节，叶微似茄叶。古惟用叶，今枝茎亦用之，因叶多伪也**。
 
 【讲解】 **藿香功能芳香化湿，解暑止呕**。为唇形科多年生草本植物广藿香或藿香的地上部份。广藿香的老茎略呈四方柱形，四角钝圆，叶片呈灰绿色或黄绿色，多皱折或破碎，两面均密生毛茸，质柔而厚；藿香的茎呈四方柱形，四角有棱背，叶多已脱落，剩余的叶灰绿色，皱折或破碎，两面微具毛。广藿香主产于广东省，藿香又名土藿香，全国大部分地区均产。生用或鲜用。亦有单用其梗或叶者。
 
