--- a/ok/bc/bc04-0.0.3.0.0.md
+++ b/ok/bc/bc04-0.0.3.0.0.md
@@ -1,6 +1,6 @@
 ### 厚朴
 
-〔原文〕 **苦降能泻实满，辛温能散湿满**。王好古曰：《别录》言厚朴温中益气，消痰下气。果泄气乎？益气乎？盖与枳实、大黄同用，则泻实满，所谓消痰下气是也。与橘皮、苍术同用，则除湿满，所谓温中益气是也。与解利药同用，则治伤寒头痛；与泻利药同用，则厚肠胃。大抵味苦性温，用苦则泻，用温则补也。同大黄、积实，即承气汤；同橘皮、苍术，即平胃散。按胀满证多不同， 清补贵得其宜。气虚宜补气，血虚宜补血，食积宜消导，痰滞宜行痰，挟热宜清热，湿盛宜利湿，寒郁者散寒，怒郁者行气，蓄血者消淤，不宜专用行散药。亦有服参、芪而胀反甚者，以挟食、挟血、挟热、挟寒，不可概作脾虚气弱治也。**入足太阴、阳明**，脾、胃。**平胃调中**，佐苍术为平胃散，平湿土之太过，以致于中和。**消痰化食, 厚肠胃，行结水，破宿血，杀脏虫。治反胃呕逆，喘咳泻痢，冷痛霍乱。误服脱人元气，孕妇忌之。榛树皮也，肉厚紫润者良。去粗皮，姜汁炙，或醋炒用。干姜为使，恶泽泻、硝石，忌豆，犯之动气。**
+〔原文〕 **苦降能泻实满，辛温能散湿满**。<small>王好古曰：《别录》言厚朴温中益气，消痰下气。果泄气乎？益气乎？盖与枳实、大黄同用，则泻实满，所谓消痰下气是也。与橘皮、苍术同用，则除湿满，所谓温中益气是也。与解利药同用，则治伤寒头痛；与泻利药同用，则厚肠胃。大抵味苦性温，用苦则泻，用温则补也。同大黄、积实，即承气汤；同橘皮、苍术，即平胃散。按胀满证多不同， 清补贵得其宜。气虚宜补气，血虚宜补血，食积宜消导，痰滞宜行痰，挟热宜清热，湿盛宜利湿，寒郁者散寒，怒郁者行气，蓄血者消淤，不宜专用行散药。亦有服参、芪而胀反甚者，以挟食、挟血、挟热、挟寒，不可概作脾虚气弱治也。</small>**入足太阴、阳明**，<small>脾、胃。</small>**平胃调中**，<small>佐苍术为平胃散，平湿土之太过，以致于中和。</small>**消痰化食, 厚肠胃，行结水，破宿血，杀脏虫。治反胃呕逆，喘咳泻痢，冷痛霍乱。误服脱人元气，孕妇忌之。榛树皮也，肉厚紫润者良。去粗皮，姜汁炙，或醋炒用。干姜为使，恶泽泻、硝石，忌豆，犯之动气。**
 
 【讲解】厚朴善除肠胃之气滞，而燥脾家之湿浊。为木兰科植物厚朴或凹叶厚朴的树皮或根皮。主产于四川、湖北、浙江、贵州等地。四川产者佳，故有川朴之名。皮粗肉细，内色深紫，油性大，香气浓，嚼无残渣，称为紫油厚朴。浸泡去粗皮切丝生用，或与生姜共制，切片用，为姜厚朴。
 
