--- a/ok/bc/bc04-0.0.4.0.0.md
+++ b/ok/bc/bc04-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 砂仁
 
-〔原文〕 **辛温香窜。补肺益肾，和胃醒脾，快气调中，通行结滞。治腹痛痞胀**，痞滞，有伤寒下早，里虚邪入而痞者，有食壅痰塞而痞者，有脾虚气弱而痞者， 须分虚实治之，不宜专用利气药，恐变为鼓胀。鼓胀内胀而外有形， 痞胀惟觉痞闷而已，皆太阴为病也。**噎膈呕吐，上气咳嗽，赤白泻利**，湿热积滞，客于大肠，砂仁亦入大、小肠经。**霍乱转筋， 奔豚崩带。祛痰逐冷，消食醒酒，止痛安胎**，气行则痛止，气顺则胎安。**散咽喉口齿浮热， 化铜铁骨硬**。王好古曰：得檀香、豆蔻入肺，得人参、益智入脾，得黄柏、茯苓入肾， 得赤石脂入大小肠。《医通》曰：辛能润肾燥，引诸药归宿丹田，地黄用之拌蒸，亦取其能达下也。《经疏》曰：肾虚气不归元，用为向导， 殆胜桂、附热药为害。**出岭南，研用**。
+〔原文〕 **辛温香窜。补肺益肾，和胃醒脾，快气调中，通行结滞。治腹痛痞胀**，<small>痞滞，有伤寒下早，里虚邪入而痞者，有食壅痰塞而痞者，有脾虚气弱而痞者， 须分虚实治之，不宜专用利气药，恐变为鼓胀。鼓胀内胀而外有形， 痞胀惟觉痞闷而已，皆太阴为病也。</small>**噎膈呕吐，上气咳嗽，赤白泻利**，<small>湿热积滞，客于大肠，砂仁亦入大、小肠经。</small>**霍乱转筋， 奔豚崩带。祛痰逐冷，消食醒酒，止痛安胎**，<small>气行则痛止，气顺则胎安。</small>**散咽喉口齿浮热， 化铜铁骨硬**。<small>王好古曰：得檀香、豆蔻入肺，得人参、益智入脾，得黄柏、茯苓入肾， 得赤石脂入大小肠。《医通》曰：辛能润肾燥，引诸药归宿丹田，地黄用之拌蒸，亦取其能达下也。《经疏》曰：肾虚气不归元，用为向导， 殆胜桂、附热药为害。</small>**出岭南，研用**。
 
 【讲解】**砂仁善能化湿行气，温脾止泻**。为姜科多年生草本植物阳春砂、海南砂或缩砂的干燥果实。生用，打碎入药。阳春砂产于我国广东阳春、信宜等县；海南砂主产于我国广东、海南岛及湛江地区，缩砂产于越南、泰国、缅甸、印度尼西亚等地。
 
