--- a/ok/bc/bc05-0.0.10.0.0.md
+++ b/ok/bc/bc05-0.0.10.0.0.md
@@ -1,6 +1,6 @@
 ### 萹蓄
 
-〔原文〕**苦平。杀虫疥，利小便。治黄疸热淋，蚘咬腹痛，虫蚀下部**（1）。煮服。**叶细如竹，弱茎蔓引，促节有粉，三月开红花。**
+〔原文〕**苦平。杀虫疥，利小便。治黄疸热淋，蚘咬腹痛，虫蚀下部**（1）。<small>煮服。</small>**叶细如竹，弱茎蔓引，促节有粉，三月开红花。**
 
 【讲解】（1）虫蚀下部：指类似现代医学阴道滴虫的病证。妇女外阴部或阴道瘙痒，甚则疼痛，常渗出水液，如白带色黄气臭，痒痛难忍等证。
 
