--- a/ok/bc/bc05-0.0.11.0.0.md
+++ b/ok/bc/bc05-0.0.11.0.0.md
@@ -1,6 +1,6 @@
 ### 石苇
 
-〔原文〕**甘苦微寒。**清肺金以滋化源，凡行水之药，必皆能先清肺火。**通膀胱而利水道，益精气，补五劳。**利湿清热之功。高阳生对黄帝治劳伤，用石韦汁。**治淋崩发背。**妙末，冷调酒服。**生石阴，柔韧如皮，背有黄毛，去毛微炙用。杏仁、滑石、射干为使。得菖蒲良。生古瓦上者名瓦韦，治淋。**
+〔原文〕**甘苦微寒。**<small>清肺金以滋化源，凡行水之药，必皆能先清肺火。</small>**通膀胱而利水道，益精气，补五劳。**<small>利湿清热之功。高阳生对黄帝治劳伤，用石韦汁。</small>**治淋崩发背。**<small>炒末，冷调酒服。</small>**生石阴，柔韧如皮，背有黄毛，去毛微炙用。杏仁、滑石、射干为使。得菖蒲良。生古瓦上者名瓦韦，治淋。**
 
 【讲解】**石韦以清热利水通淋为主要功效。**为水龙骨科多年生草本植物石韦的叶片。生岩石阴凉处，叶鞣如皮，故名石韦。其叶背面有毛，刷净茸毛，切碎，生用。
 
