--- a/ok/bc/bc04-0.0.6.0.0.md
+++ b/ok/bc/bc04-0.0.6.0.0.md
@@ -1,6 +1,6 @@
 ### 草豆蔻
 
-[原文] **辛热香散。暖胃健脾，破气开郁，燥湿祛寒， 除痰化食。治瘴疠寒疟**，佐常山能截疟，或与知母同用，取其一阴一阳，治寒热瘴疟。盖草果治太阴独胜之寒，知母治阳明独胜之火。**寒客胃痛**， 散滞气， 利膈痰。因滞因寒者多效。**霍乱泻痢，噎膈反胃，痞满吐酸，痰饮积聚。解口臭气，酒毒鱼肉毒。**故食料用之。**过剂助脾热， 耗气损目。闽产名草蔻，如龙眼而微长，皮黄白薄而棱峭，仁如砂仁，而辛香气和；滇广所产名草果，如诃子， 皮黑厚而棱密，子粗而辛臭，虽是一物，微有不同。面裹煨熟，取仁用。忌铁。**
+[原文] **辛热香散。暖胃健脾，破气开郁，燥湿祛寒， 除痰化食。治瘴疠寒疟**，<small>佐常山能截疟，或与知母同用，取其一阴一阳，治寒热瘴疟。盖草果治太阴独胜之寒，知母治阳明独胜之火。</small>**寒客胃痛**， <small>散滞气， 利膈痰。因滞因寒者多效。</small>**霍乱泻痢，噎膈反胃，痞满吐酸，痰饮积聚。解口臭气，酒毒鱼肉毒。**<small>故食料用之。</small>**过剂助脾热， 耗气损目。闽产名草蔻，如龙眼而微长，皮黄白薄而棱峭，仁如砂仁，而辛香气和；滇广所产名草果，如诃子， 皮黑厚而棱密，子粗而辛臭，虽是一物，微有不同。面裹煨熟，取仁用。忌铁。**
 
 【讲解】**草豆蔻功能燥湿，温中行气。**为姜科多年生草本植物草豆蔻的干燥近成熟的种子。蒴果圆球形，外被粗毛，熟时黄色。种子呈圆球或椭圆形，表面灰棕色，被一层白色透明的假种皮，背稍隆起，气芳香，味辛辣。去壳取仁，生用，打碎入药。主产于广西、广东等地。
 
