--- a/ok/bc/bc05-0.0.1.0.0.md
+++ b/ok/bc/bc05-0.0.1.0.0.md
@@ -1,10 +1,10 @@
 ### 茯苓
 
-〔原文〕**甘温。益脾助阳，淡渗利窍除湿。色白入肺泻热，而下通膀胱。**能通心气于肾，使热从小便出，然必其上行入肺，清其化源，而后能下降利水也。**宁心益气，调营理卫，安魄安魂。**营主血，卫主气，肺藏魄，肝藏魂。**治忧恚惊悸，**心肝不足。**心下结痛，寒热烦满，口焦舌干，**口为脾窍，舌为心苗。火下降则热除。**咳逆**肺火。**呕哕，**胃火。**膈中痰水，**脾虚。**水肿淋沥，泄泻**渗湿。**遗精。**益心肾。若虚寒遗溺泄精者，又当用温热之剂峻补其下，忌用茯苓淡渗之药。**小便结者能通，多者能止。**湿除则便自止。**生津止渴，**湿热去则津生。**退热安胎。松根灵气结成，以大块坚白者良。去皮，乳拌蒸，多拌良。**
+〔原文〕**甘温。益脾助阳，淡渗利窍除湿。色白入肺泻热，而下通膀胱。**<small>能通心气于肾，使热从小便出，然必其上行入肺，清其化源，而后能下降利水也。</small>**宁心益气，调营理卫，安魄安魂。**<small>营主血，卫主气，肺藏魄，肝藏魂。</small>**治忧恚惊悸，**<small>心肝不足。</small>**心下结痛，寒热烦满，口焦舌干，**<small>口为脾窍，舌为心苗。火下降则热除。</small>**咳逆**<small>肺火。</small>**呕哕，**<small>胃火。</small>**膈中痰水，**<small>脾虚。</small>**水肿淋沥，泄泻**<small>渗湿。</small>**遗精。**<small>益心肾。若虚寒遗溺泄精者，又当用温热之剂峻补其下，忌用茯苓淡渗之药。</small>**小便结者能通，多者能止。**<small>湿除则便自止。</small>**生津止渴，**<small>湿热去则津生。</small>**退热安胎。松根灵气结成，以大块坚白者良。去皮，乳拌蒸，多拌良。**
 
-**白者入肺、膀胱气分，赤者入心，小肠气分，**时珍曰：白入气，赤入血。**补心脾白胜，利湿热赤胜。恶白蔹，畏地榆、秦艽、龟甲、雄黄，忌醋。**
+**白者入肺、膀胱气分，赤者入心，小肠气分，**<small>时珍曰：白入气，赤入血。</small>**补心脾白胜，利湿热赤胜。恶白蔹，畏地榆、秦艽、龟甲、雄黄，忌醋。**
 
-**皮专能行水，治水肿肤胀。**以皮行皮之义，五皮散用之。凡肿而烦渴，便秘溺赤，属阳水，宜五皮饮、疏凿饮；不烦渴，大便溏，小便数，属阴水，宜实脾饮、流气饮。腰以上肿宜汗，腰以下肿宜利小便。
+**皮专能行水，治水肿肤胀。**<small>以皮行皮之义，五皮散用之。凡肿而烦渴，便秘溺赤，属阳水，宜五皮饮、疏凿饮；不烦渴，大便溏，小便数，属阴水，宜实脾饮、流气饮。腰以上肿宜汗，腰以下肿宜利小便。</small>
 
 【讲解】**茯苓既能利水渗湿，又能健脾宁心。**为多孔菌科真菌茯苓的菌核。寄生于松科植物赤松或马尾松等树根上。野生或栽培。主产于云南、湖北、四川、安徽等地。以云南产者质佳，故有云茯苓之称。茯苓菌核在加工时分为：其黑褐色外皮为茯苓皮，近外皮部的淡红色部分为赤茯苓，内部白色部分为白茯苓，中间带有松根的白色部分为茯神，其松根为茯神木，即黄松节。均生用，用朱砂拌者称朱茯苓或朱茯神。
 
