--- a/ok/bc/bc04-0.0.5.0.0.md
+++ b/ok/bc/bc04-0.0.5.0.0.md
@@ -1,6 +1,6 @@
 ### 白豆蔻
 
-〔原文〕 **辛热。流行三焦，温暖脾胃**，三焦利，脾胃运，则诸证自平矣。**而为肺家本药**。肺主气。**散滞气，消酒积，除寒燥湿，化食宽膨。治脾虚疟疾，感寒腹痛， 吐逆反胃**，肺胃火盛及气虚者禁用。**白睛翳膜**， 白睛属肺，能散肺滞。**太阳经目眦红筋**。太阳脉起目眦。**番舶者良，研细用**。
+〔原文〕 **辛热。流行三焦，温暖脾胃**，<small>三焦利，脾胃运，则诸证自平矣。</small>**而为肺家本药**。<small>肺主气。</small>**散滞气，消酒积，除寒燥湿，化食宽膨。治脾虚疟疾，感寒腹痛， 吐逆反胃**，<small>肺胃火盛及气虚者禁用。</small>**白睛翳膜**，<small> 白睛属肺，能散肺滞。</small>**太阳经目眦红筋**。<small>太阳脉起目眦。</small>**番舶者良，研细用**。
 
 【讲解】**白豆蔻功能化湿行气**。为姜科多年生草本植物白豆蔻的干燥成熟果实。去皮或连皮打碎，生用。主产于越南、泰国等地。我国广西、云南亦有栽培。
 
